added curving option to diagram

--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -49,6 +49,7 @@
   "all_blocks": "Všechny bloky",
   "all_transactions": "Všechny transakce",
   "amount": "Částka",
+  "amount_nqt": "Množství",
   "amount_plus_fee": "Částka + Poplatek",
   "and_logout": "a odhlásit se",
   "animate_forging_indicator": "Obnovit indikátor forgingu",
@@ -96,9 +97,13 @@
   "block": "Blok",
   "block_details": "Detaily bloku",
   "block_generation_time": "Doba generování bloku",
+  "block_height": "Výška bloku",
+  "block_id": "ID bloku",
+  "block_reward": "Blokovat odměnu",
   "block_signature": "Podpis bloku",
   "block_timestamp": "Časové razítko bloku",
   "blocks": "Bloky",
+  "blocks_details": "Detaily bloku",
   "bookmark_asset": "Přidat aktivum do záložek",
   "broadcast": "Vysílat",
   "broadcast_transaction": "Vysílat transakci",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Stahuji blockchain",
   "downloading_update": "Probíhá stahování aktualizace. Jakmile budete hotovi, budete informováni.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
+  "ec_block_height": "Výška bloku EC",
+  "ec_block_id": "ID bloku EC",
   "edit": "Upravit",
   "effective_balance": "Efektivní zůstatek",
   "email_address": "Emailová adresa",
@@ -441,6 +448,7 @@
   "export_contact": "Exportovat kontakty",
   "failed": "Nepodařilo se",
   "fee": "Poplatek",
+  "fee_nqt": "Poplatek",
   "feedback": "Zpětná vazba",
   "feedback_given": "Poskztnuta zpětná vazba",
   "feedback_note": "Zpětná vazba",
@@ -470,6 +478,8 @@
   "generated_token_is": "Vygenerovaný token je: ",
   "generation_signature": "Generování podpisu",
   "generator": "Generátor",
+  "generator_address": "Adresa generátoru",
+  "generator_id": "ID generátoru",
   "generator_public_key": "Generátor veřejného klíče",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Poskytnout zpětnou vazbu",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Žádné transakce v tomto bloku.",
   "no_transactions_yet": "Doposud žádné transakce.",
   "non_verified_source": "Neznámý, potenciálně nezabezpečený zdroj",
+  "nonce": "Nonce",
   "none": "Žádný",
   "not_delivered_in_time": "Není doručena včas",
   "not_forging": "Kování vypnuto",
@@ -641,6 +652,7 @@
   "nr_votes": "Počet hlasů",
   "number_of_trades": "Počet obchodů",
   "number_of_transactions": "Počet transakcí",
+  "number_transactions": "Počet transakcí",
   "numeric_account_id": "Číselné ID účtu",
   "official_hash": "Oficiální hash",
   "old_browser_warning": "Používáte zastaralý prohlížeč, který nepodporuje tuto aplikaci.",
@@ -672,6 +684,7 @@
   "payload_length": "Velikost datové části",
   "payment": "Platba",
   "payment_with_message": "Platba se zprávou",
+  "payments": "Platby",
   "peer": "Protějšek",
   "peers": "Peeři",
   "pending": "Čekající",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Nedávné transakce od roku 2003",
   "recipient": "Příjemce",
   "recipient_account": "Účet příjemce",
+  "recipient_address": "Adresa příjemce",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
+  "recipient_id": "ID příjemce",
   "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
   "recipient_malformed": "The recipient account is malformed, please adjust.",
   "recipient_malformed_suggestion": "Adresa příjemců je nesprávná, měli jste na mysli __recipient__?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Veřejný klíč tohoto účtu je již oznámen. Použijte místo toho ID účtu.",
   "recipient_unknown": "Účet příjemce je neznámý účet, což znamená, že na něm nikdy neproběhly příchozí nebo odchozí transakce. Prosím zkontrolujte adresu příjemce před odesláním.",
   "recipient_unknown_pka": "Účet příjemce je neznámý účet, což znamená, že na něm nikdy neproběhly příchozí nebo odchozí transakce. Můžete zvýšit zabezpečení tím, že poskytnete veřejný klíč příjemce.",
+  "recipients": "Příjemci",
   "record": "Záznam",
   "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
   "referenced_transaction_hash": "Referenced Transaction Hash",
@@ -750,9 +766,11 @@
   "remove_from_group": "Odstranit ze skupiny",
   "repeat": "Znovu",
   "request_burst": "Request BURST",
+  "request_processing_time": "Doba zpracování požadavku",
   "returning_user_q": "Stávající uživatel?",
   "reward_recipient": "Příjemce odměny",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop Number",
   "search_aliases": "Hledat aliasy...",
   "search_assets": "Hledat aktiva...",
   "search_by_id": "Hledat podle ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Odeslat zprávu",
   "send_message_to_sender": "Odeslat zprávu odesílateli",
   "sender": "Odesilatel",
+  "sender_address": "Adresa odesílatele",
+  "sender_id": "ID odesílatele",
   "sender_public_key": "Veřejný klíč odesilatele",
   "server_error_unknown": "Došlo k neznámé chybě.",
   "set_account_info": "Nastavení účtu",
@@ -790,12 +810,14 @@
   "settings": "Nastavení",
   "share_address": "Sdílet adresu",
   "show_console_log_button": "Zobrazit tlačítko logovací konzole",
+  "signature": "Podpis",
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Počet bajtů podepsané transakce",
   "smart_contract": "Inteligentní smlouva",
   "smart_contract_creation": "Vytvoření inteligentní smlouvy",
   "smart_contract_payment": "Platba inteligentní smlouvy",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Hladká křivka",
   "standard_fee": "Standard",
   "start_date": "Počátek",
   "start_forging": "Zahájit forging",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Jméno skupiny bylo úspěšně aktualizováno.",
   "success_hash_verification": "Stažená verze byla ověřena, hash je správný. Můžete pokračovat v instalaci.",
   "success_issue_asset": "Aktivum bylo vytvořeno a brzy bude k dispozici.",
+  "success_lease_balance": "Váš zůstatek bude pronajat v 1440 blocích.",
   "success_message_sent": "Vaše zpráva byla odeslána.",
   "success_messages_decrypt": "Zpráva byla úspěšně dešifrována/Zprávy byly úspěšně dešifrovány.",
   "success_passphrase_confirmed": "Heslo bylo úspěšně potvrzeno, nyní jste přihlášen(a).",
@@ -953,6 +976,7 @@
   "website_or_text": "Webová stránka nebo text",
   "welcome_to_burst": "Vítejte v burst!",
   "with_burst": "S burst",
+  "wrong_pin": "Chybný kód PIN",
   "x_confirmations": "__x__ confirmations",
   "yes": "Ano",
   "yesterdays_change": "Včerejší změna",
