--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -49,6 +49,7 @@
   "all_blocks": "Todos los Bloques",
   "all_transactions": "Todas las Transacciones",
   "amount": "Cantidad",
+  "amount_nqt": "Cantidad",
   "amount_plus_fee": "Cantidad + Tarifa",
   "and_logout": "y Cerrar Sesión",
   "animate_forging_indicator": "Animar Indicador de Forja",
@@ -96,9 +97,13 @@
   "block": "Bloque",
   "block_details": "Detalles del Bloque",
   "block_generation_time": "Hora de Generación del Bloque",
+  "block_height": "Altura del bloque",
+  "block_id": "ID de bloque",
+  "block_reward": "Recompensa de bloque",
   "block_signature": "Firma del Bloque",
   "block_timestamp": "Marca de Tiempo del Bloque",
   "blocks": "Bloques",
+  "blocks_details": "Detalles del bloque",
   "bookmark_asset": "Añadir Activo a Favoritos",
   "broadcast": "Transmitir",
   "broadcast_transaction": "Transmitir Transacción",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Descargando Cadena de Bloques",
   "downloading_update": "La actualización se está descargando. Estarás informado una vez que haya terminado.",
   "drop_update": "Arrastre la actualización del cliente (el archivo zip) aquí o haga clic para seleccionar.",
+  "ec_block_height": "Altura del bloque EC",
+  "ec_block_id": "ID de bloque EC",
   "edit": "Editar",
   "effective_balance": "Saldo Efectivo",
   "email_address": "Dirección de Correo electrónico",
@@ -441,6 +448,7 @@
   "export_contact": "Exportar contactos",
   "failed": "Fallo",
   "fee": "Tarifa",
+  "fee_nqt": "Cuota",
   "feedback": "Comentarios",
   "feedback_given": "Valoración Enviada",
   "feedback_note": "Comentario",
@@ -470,6 +478,8 @@
   "generated_token_is": "El identificador generado es:",
   "generation_signature": "Firma de Generación",
   "generator": "Generador",
+  "generator_address": "Dirección del generador",
+  "generator_id": "ID del generador",
   "generator_public_key": "Clave Pública del Generador",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Dejar Valoración",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Ninguna transacción en este bloque.",
   "no_transactions_yet": "Aún no hay transacciones.",
   "non_verified_source": "Desconocida, fuente potencialmente insegura.",
+  "nonce": "Mientras tanto",
   "none": "Ninguno",
   "not_delivered_in_time": "No entregado a tiempo",
   "not_forging": "Sin Forjar",
@@ -641,6 +652,7 @@
   "nr_votes": "# Votos",
   "number_of_trades": "Número de Operaciones",
   "number_of_transactions": "Número de Transacciones",
+  "number_transactions": "Número de transacciones",
   "numeric_account_id": "ID Numérica de Cuenta",
   "official_hash": "Hash Oficial",
   "old_browser_warning": "Usted está usando un navegador antiguo no soportado por esta aplicación.",
@@ -672,6 +684,7 @@
   "payload_length": "Longitud de la Carga",
   "payment": "Pago",
   "payment_with_message": "Pago Con Mensaje",
+  "payments": "Pagos",
   "peer": "Par",
   "peers": "Pares",
   "pending": "Pendiente",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Transacciones recientes desde",
   "recipient": "Destinatario",
   "recipient_account": "Cuenta de Destino",
+  "recipient_address": "Dirección del receptor",
   "recipient_alias_suggestion": "Si desea escribir un alias, añada el caracter @ al principio.",
+  "recipient_id": "ID del destinatario",
   "recipient_info": "La cuenta de destino tiene clave pública y un saldo de __burst__ BURST.",
   "recipient_malformed": "La cuenta del destinatario contiene errores, por favor revísela.",
   "recipient_malformed_suggestion": "La dirección de destino es incorrecta, quizá quiso decir",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "La clave pública de esta cuenta ya ha sido declarada. Utilice la ID de cuenta en su lugar.",
   "recipient_unknown": "La cuenta de destino es desconocida, lo que significa que nunca ha recibido o emitido ninguna transacción. Por favor confirme la cuenta de destino antes de enviar.",
   "recipient_unknown_pka": "La cuenta de destino es una cuenta desconocida, lo que significa que nunca he recibido o enviado ninguna transacción. Para hacer este envío, debe suministrar también la clave pública de la cuenta de destino.",
+  "recipients": "Destinatarios",
   "record": "Grabar",
   "referenced_transaction_full_hash": "Hash Completo de la Transacción de Referencia",
   "referenced_transaction_hash": "Hash de la Transacción de Referencia",
@@ -750,9 +766,11 @@
   "remove_from_group": "Quitar del Grupo",
   "repeat": "Repetir",
   "request_burst": "Request BURST",
+  "request_processing_time": "Tiempo de procesamiento de solicitud",
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Recipiente Recompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Número de Scoop",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de Activos...",
   "search_by_id": "Búsqueda Por ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Enviar un mensaje",
   "send_message_to_sender": "Enviar mensaje al remitente",
   "sender": "Remitente",
+  "sender_address": "Dirección del remitente",
+  "sender_id": "identificación del remitente",
   "sender_public_key": "Clave Pública del Remitente",
   "server_error_unknown": "Se ha producido un error desconocido.",
   "set_account_info": "Establecer la Información de Cuenta",
@@ -790,12 +810,14 @@
   "settings": "Configuración",
   "share_address": "Compartir Dirección",
   "show_console_log_button": "Mostrar Botón de Registro de Consola",
+  "signature": "Firma",
   "signature_hash": "Hash de la Firma",
   "signed_transaction_bytes": "Bytes de la Transacción Firmada",
   "smart_contract": "Contrato inteligente",
   "smart_contract_creation": "Creación de contrato inteligente",
   "smart_contract_payment": "Pago de contrato inteligente",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Curva suave",
   "standard_fee": "Estándar",
   "start_date": "Fecha de Inicio",
   "start_forging": "Comenzar a Forjar",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Nombre de Grupo actualizado con éxito.",
   "success_hash_verification": "La versión descargada se ha verificado, el hash es correcto. Puede continuar con la instalación.",
   "success_issue_asset": "El activo ha sido creado y estará disponible pronto.",
+  "success_lease_balance": "Su saldo será arrendado en 1440 bloques.",
   "success_message_sent": "Su mensaje ha sido enviado.",
   "success_messages_decrypt": "Mensaje(s) descifrados con éxito.",
   "success_passphrase_confirmed": "Contraseña confirmada con éxito, ha iniciado su sesión.",
@@ -953,6 +976,7 @@
   "website_or_text": "Sitio web o Texto",
   "welcome_to_burst": "¡Bienvenido a Burst!",
   "with_burst": "Con BURST",
+  "wrong_pin": "Pin erróneo",
   "x_confirmations": "__x__ confirmaciones",
   "yes": "Sí",
   "yesterdays_change": "Cambio de ayer",
