--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -49,6 +49,7 @@
   "all_blocks": "Semua Blok",
   "all_transactions": "Semua transaksi",
   "amount": "Jumlah",
+  "amount_nqt": "Jumlah",
   "amount_plus_fee": "Jumlah + Biaya",
   "and_logout": "dan Logout",
   "animate_forging_indicator": "Menghidupkan Penyusunan Indikator",
@@ -96,9 +97,13 @@
   "block": "Blok",
   "block_details": "Blok rincian",
   "block_generation_time": "Waktu untuk Menghasilkan Blok",
+  "block_height": "Tinggi Blok",
+  "block_id": "Blokir ID",
+  "block_reward": "Blokir Hadiah",
   "block_signature": "Blok tanda tangan",
   "block_timestamp": "Blok Timestamp",
   "blocks": "Blok-blok",
+  "blocks_details": "Detail Blokir",
   "bookmark_asset": "Bookmark ini aset",
   "broadcast": "Siaran",
   "broadcast_transaction": "Siarkan transaksi",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Mengunduh Blockchain",
   "downloading_update": "Pembaruan sedang diunduh. Anda akan diberi tahu setelah selesai.",
   "drop_update": "Drop update klien (file zip) di sini ketika telah diunduh atau klik untuk memilih.",
+  "ec_block_height": "Tinggi Blok EC",
+  "ec_block_id": "ID Blok EC",
   "edit": "Mengedit",
   "effective_balance": "Keseimbangan yang efektif",
   "email_address": "Alamat Email",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Gagal",
   "fee": "Biaya",
+  "fee_nqt": "Biaya",
   "feedback": "Umpan balik",
   "feedback_given": "Umpan balik yang diberikan",
   "feedback_note": "Tanggapan",
@@ -470,6 +478,8 @@
   "generated_token_is": "Token yang dihasilkan adalah:",
   "generation_signature": "Generasi Menandatangani",
   "generator": "Generator",
+  "generator_address": "Alamat Generator",
+  "generator_id": "ID Generator",
   "generator_public_key": "Generator Kunci Publik",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Berikan umpan balik",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Tidak ada transaksi dalam blok ini.",
   "no_transactions_yet": "Belum ada transaksi.",
   "non_verified_source": "Sumber tidak dikenal, berpotensi tidak aman",
+  "nonce": "Nonce",
   "none": "Tidak ada",
   "not_delivered_in_time": "Tidak dikirim tepat waktu",
   "not_forging": "Tidak penyusunan",
@@ -641,6 +652,7 @@
   "nr_votes": "# Suara",
   "number_of_trades": "Jumlah transaksi",
   "number_of_transactions": "Jumlah transaksi",
+  "number_transactions": "Jumlah Transaksi",
   "numeric_account_id": "ID Rekening Numerik",
   "official_hash": "Hash resmi",
   "old_browser_warning": "Anda menggunakan browser lama yang tidak mendukung aplikasi ini.",
@@ -672,6 +684,7 @@
   "payload_length": "membayar beban panjang",
   "payment": "Pembayaran",
   "payment_with_message": "Pembayaran dengan pesan",
+  "payments": "Pembayaran",
   "peer": "Sesama",
   "peers": "Sesama",
   "pending": "Tertunda",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Transaksi terakhir sejak",
   "recipient": "Penerima",
   "recipient_account": "Rekening Penerima",
+  "recipient_address": "Alamat penerima",
   "recipient_alias_suggestion": "Jika Anda ingin mengetik alias, tambahkan dengan karakter @.",
+  "recipient_id": "ID Penerima",
   "recipient_info": "Rekening penerima memiliki kunci publik dan keseimbangan __burst__ BURST.",
   "recipient_malformed": "Rekening penerima kecacatan, silahkan Sesuaikan.",
   "recipient_malformed_suggestion": "Alamat Penerima kecacatan, Apakah Anda berarti __recipient__?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Public key rekening ini telah diumumkan. Gunakan ID rekening.",
   "recipient_unknown": "Akun penerima adalah rekening yang tidak diketahui. Ini tidak pernah memiliki transaksi masuk atau keluar. Silahkan mengecek alamat penerima sebelum mengirimkan.",
   "recipient_unknown_pka": "Rekening penerima tidak diketahui, yang berarti rekening tersebut belum pernah memiliki transaksi masuk atau keluar. Untuk mengirimkan permintaan ini anda diharuskan menyediakan juga public key penerima.",
+  "recipients": "Penerima",
   "record": "Merekam",
   "referenced_transaction_full_hash": "Direferensikan transaksi penuh Hash",
   "referenced_transaction_hash": "Hash transaksi tereferensi",
@@ -750,9 +766,11 @@
   "remove_from_group": "Menghapus dari grup",
   "repeat": "Ulangi",
   "request_burst": "Request BURST",
+  "request_processing_time": "Permintaan Waktu Pemrosesan",
   "returning_user_q": "Kembali pengguna?",
   "reward_recipient": "Penerima Hadiah",
   "same_out": "Same Amount",
+  "scoop_num": "Jumlah sendok",
   "search_aliases": "Alias Cari...",
   "search_assets": "Cari Aset...",
   "search_by_id": "Cari berdasarkan ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Kirim pesan",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "Pengirim",
+  "sender_address": "Alamat pengirim",
+  "sender_id": "ID pengirim",
   "sender_public_key": "Public Key Pengirim",
   "server_error_unknown": "Terjadi kesalahan yang tidak dikenal.",
   "set_account_info": "Mengatur Catatan Info",
@@ -790,12 +810,14 @@
   "settings": "Pengaturan",
   "share_address": "Berbagi alamat",
   "show_console_log_button": "Tampilkan tombol Log konsol",
+  "signature": "Tanda tangan",
   "signature_hash": "Tanda tangan Hash",
   "signed_transaction_bytes": "Byte ditandatangani transaksi",
   "smart_contract": "Kontrak Cerdas",
   "smart_contract_creation": "Penciptaan Kontrak Cerdas",
   "smart_contract_payment": "Pembayaran Kontrak Cerdas",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Kurva halus",
   "standard_fee": "Standar",
   "start_date": "Tanggal Mulai",
   "start_forging": "Mulai penyusunan",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Nama kelompok berhasil.",
   "success_hash_verification": "Versi yang diunduh telah diverifikasi, hash benar. Anda dapat melanjutkan instalasi.",
   "success_issue_asset": "Aset telah dibuat dan akan segera tersedia.",
+  "success_lease_balance": "Saldo Anda akan disewakan dalam 1440 blok.",
   "success_message_sent": "Pesan Anda telah dikirim.",
   "success_messages_decrypt": "Pesan didekripsi berhasil.",
   "success_passphrase_confirmed": "Passphrase dikonfirmasi berhasil, Anda sekarang masuk.",
@@ -953,6 +976,7 @@
   "website_or_text": "Situs web atau teks",
   "welcome_to_burst": "Selamat datang di Burst!",
   "with_burst": "Dengan BURST",
+  "wrong_pin": "PIN salah",
   "x_confirmations": "konfirmasi __x__",
   "yes": "Ya",
   "yesterdays_change": "Perubahan kemarin",
