--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -49,6 +49,7 @@
   "all_blocks": "Toate blocurile",
   "all_transactions": "Toate Tranzacţiile",
   "amount": "Cantitate",
+  "amount_nqt": "Cantitate",
   "amount_plus_fee": "Cantitate + taxă",
   "and_logout": "şi Delogare",
   "animate_forging_indicator": "Indicator de forjare animat",
@@ -96,9 +97,13 @@
   "block": "Bloc",
   "block_details": "Detalii Bloc",
   "block_generation_time": "Timp Generare Bloc",
+  "block_height": "Inaltimea blocului",
+  "block_id": "Identitatea blocului",
+  "block_reward": "Blocați recompensa",
   "block_signature": "Semnătură Bloc",
   "block_timestamp": "Marcaj dată/oră Bloc",
   "blocks": "Blocuri",
+  "blocks_details": "Blocați detaliile",
   "bookmark_asset": "Marchează Activa",
   "broadcast": "Transmite",
   "broadcast_transaction": "Transmite Tranzacția",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Descărcare Blockchain",
   "downloading_update": "Actualizarea este descărcată. Veți fi informat după ce ați terminat.",
   "drop_update": "Glisează actualizarea clientului (fişier zip) aici când este descărcat sau fă clic pentru a selecta.",
+  "ec_block_height": "Înălțimea blocului CE",
+  "ec_block_id": "Codul blocului CE",
   "edit": "Editare",
   "effective_balance": "Sold Efectiv",
   "email_address": "Adresă de Email",
@@ -441,6 +448,7 @@
   "export_contact": "Exportă Contacte",
   "failed": "Eşuat",
   "fee": "Taxă",
+  "fee_nqt": "taxă",
   "feedback": "Comentarii",
   "feedback_given": "Feedback-ul trimis",
   "feedback_note": "Notiță Feedback",
@@ -470,6 +478,8 @@
   "generated_token_is": "Token-ul generat este: ",
   "generation_signature": "Generare semnătură",
   "generator": "Generator",
+  "generator_address": "Adresa generatorului",
+  "generator_id": "ID-ul generatorului",
   "generator_public_key": "Cheia Publică Generator",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Oferiți Feedback",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Nu sunt tranzacţii în acest bloc.",
   "no_transactions_yet": "Încă nu sunt tranzacţii.",
   "non_verified_source": "Sursă necunoscută, potențial nesigură",
+  "nonce": "Nonce",
   "none": "Niciuna",
   "not_delivered_in_time": "Nelivrat la timp",
   "not_forging": "Nu Forjează",
@@ -641,6 +652,7 @@
   "nr_votes": "# Voturi",
   "number_of_trades": "Număr Tranzacţii",
   "number_of_transactions": "Număr Tranzacţii",
+  "number_transactions": "Numărul de tranzacții",
   "numeric_account_id": "ID cont numeric",
   "official_hash": "Hash Oficial",
   "old_browser_warning": "Utilizezi un browser vechi neacceptat de această aplicaţie.",
@@ -672,6 +684,7 @@
   "payload_length": "Capacitatea lungimii",
   "payment": "Plată",
   "payment_with_message": "Plată cu mesaj",
+  "payments": "plăţile",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "În Aşteptare",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Tranzacții recente de la",
   "recipient": "Destinatar",
   "recipient_account": "Cont destinatar",
+  "recipient_address": "Adresa destinatarului",
   "recipient_alias_suggestion": "Dacă dorești să introduci un alias, precedează-l cu caracterul @.",
+  "recipient_id": "ID-ul destinatarului",
   "recipient_info": "Contul destinatarului are o cheie publică şi un sold de __burst__ burst.",
   "recipient_malformed": "Contul destinatarului este incorect, te rugăm să-l reintroduci.",
   "recipient_malformed_suggestion": "Adresa destinatarului pare deformată, ai vrut să spui __recipient__?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Cheia publică a acestui cont a fost anunţată deja. Utilizează ID-ul tău de cont.",
   "recipient_unknown": "Contul destinatarului este un cont necunoscut, ceea ce înseamnă că nu a avut niciodată o tranzacţie de intrare sau ieşire. Te rugăm să verifici adresa destinatarului înainte de a tranzacționa.",
   "recipient_unknown_pka": "Contul destinatarului este un cont de necunoscut, ceea ce înseamnă că nu a avut niciodată o tranzacţie de intrare sau ieşire. Puteţi mări securitatea prin furnizarea cheii publice a destinatarului.",
+  "recipients": "destinatarii",
   "record": "Record",
   "referenced_transaction_full_hash": "Hash-ul complet al tranzacției referențiate",
   "referenced_transaction_hash": "Hash-ul tranzacției referențiate",
@@ -750,9 +766,11 @@
   "remove_from_group": "Elimină din grup",
   "repeat": "Repetă",
   "request_burst": "Request BURST",
+  "request_processing_time": "Cereți timpul de procesare",
   "returning_user_q": "Deja înregistrat?",
   "reward_recipient": "Recipient Recompensă",
   "same_out": "Same Amount",
+  "scoop_num": "Numărul de bucăți",
   "search_aliases": "Căutare alias-uri...",
   "search_assets": "Căutare Active...",
   "search_by_id": "Căutare după ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Trimite Mesaj",
   "send_message_to_sender": "Trimite Mesaj pentru Expeditor",
   "sender": "Expeditor",
+  "sender_address": "Adresa expeditorului",
+  "sender_id": "ID-ul expeditorului",
   "sender_public_key": "Cheia Publică Expeditor",
   "server_error_unknown": "S-a produs o eroare necunoscută.",
   "set_account_info": "Setaţi informațiile contului",
@@ -790,12 +810,14 @@
   "settings": "Setări",
   "share_address": "Partajează Adresa",
   "show_console_log_button": "Arată butonul de logare al consolei",
+  "signature": "Semnătură",
   "signature_hash": "Hash-ul Semnăturii",
   "signed_transaction_bytes": "Bytes-ii tranzacției semnalate",
   "smart_contract": "Contractul inteligent",
   "smart_contract_creation": "Crearea inteligentă a contractelor",
   "smart_contract_payment": "Plata contractului inteligent",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Smooth Curve",
   "standard_fee": "Standard",
   "start_date": "Data începerii",
   "start_forging": "Începe forjarea",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Nume grup actualizat cu succes.",
   "success_hash_verification": "Versiunea descărcată a fost verificată, hash-ul este corect. Poți continua cu instalarea.",
   "success_issue_asset": "Activa a fost creată şi va fi disponibilă în curând.",
+  "success_lease_balance": "Soldul dvs. va fi închiriat în 1440 blocuri.",
   "success_message_sent": "Mesajul a fost trimis.",
   "success_messages_decrypt": "Mesaj(e) decriptat(e) cu succes.",
   "success_passphrase_confirmed": "Parola de acces confirmată cu succes, acum esti logat.",
@@ -953,6 +976,7 @@
   "website_or_text": "Pagină Web sau text",
   "welcome_to_burst": "Bine ai venit la burst!",
   "with_burst": "Cu burst",
+  "wrong_pin": "Cod PIN greșit",
   "x_confirmations": "__x__ confirmări",
   "yes": "Da",
   "yesterdays_change": "Schimbarea de ieri",
