--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -49,6 +49,7 @@
   "all_blocks": "Все Блоки",
   "all_transactions": "Все Транзакции",
   "amount": "Количество",
+  "amount_nqt": "Количество",
   "amount_plus_fee": "Сумма + Комиссия",
   "and_logout": "и выйти",
   "animate_forging_indicator": "Анимировать индикатор форжинга",
@@ -96,9 +97,13 @@
   "block": "Блок",
   "block_details": "Детали блока",
   "block_generation_time": "Время генерации блока",
+  "block_height": "Высота блока",
+  "block_id": "Блок ID",
+  "block_reward": "Вознаграждение за блок",
   "block_signature": "Подпись блока",
   "block_timestamp": "Отметка времени блока",
   "blocks": "Блоки",
+  "blocks_details": "Детали блока",
   "bookmark_asset": "Добавить в закладки этот актив",
   "broadcast": "Трансляция",
   "broadcast_transaction": "Послать Транзакцию",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Загрузка блокчейн",
   "downloading_update": "Обновление загружается. Вы будете проинформированы, как только это закончится.",
   "drop_update": "Перетащите сюда скачанный клиент (zip файл) или нажмите для выбора.",
+  "ec_block_height": "Высота блока ЕС",
+  "ec_block_id": "EC Block ID",
   "edit": "Редактировать",
   "effective_balance": "Эффективный баланс",
   "email_address": "Адрес электронной почты",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Не удалось",
   "fee": "Комиссия",
+  "fee_nqt": "плата",
   "feedback": "Обратная связь",
   "feedback_given": "Обратная связь предоставлена",
   "feedback_note": "Отзыв",
@@ -470,6 +478,8 @@
   "generated_token_is": "Сгенерированный токен:",
   "generation_signature": "Создание подписи",
   "generator": "Генератор",
+  "generator_address": "Адрес генератора",
+  "generator_id": "Идентификатор генератора",
   "generator_public_key": "Генератор открытого ключа",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Омтавить отзыв",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "В этом блоке нет транзакций.",
   "no_transactions_yet": "Еще нет транзакций.",
   "non_verified_source": "Неизвестный, потенциально небезопасный источник",
+  "nonce": "данное время",
   "none": "Не найдено.",
   "not_delivered_in_time": "Не доставлено вовремя",
   "not_forging": "Нет Форжинга",
@@ -641,6 +652,7 @@
   "nr_votes": "# Голосовать",
   "number_of_trades": "Количество сделок",
   "number_of_transactions": "Количество транзакций",
+  "number_transactions": "Количество транзакций",
   "numeric_account_id": "Числовой идентификатор аккаунта",
   "official_hash": "Официальный хэш",
   "old_browser_warning": "Вы используете старый браузер, не поддерживающий это приложение.",
@@ -672,6 +684,7 @@
   "payload_length": "Длина коммерческой нагрузки",
   "payment": "Оплата",
   "payment_with_message": "Платеж с сообщением",
+  "payments": "платежи",
   "peer": "Узел",
   "peers": "Пиры",
   "pending": "Ожидающие",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Последние транзакции с",
   "recipient": "Получатель",
   "recipient_account": "Счет получателя",
+  "recipient_address": "Адрес получателя",
   "recipient_alias_suggestion": "Если вы хотите ввести псевдоним, введите перед ним символ @.",
+  "recipient_id": "Идентификатор получателя",
   "recipient_info": "Счет получателя имеет открытый ключ и баланс __burst__ BURST.",
   "recipient_malformed": "Неверный формат учетной записи получателя, пожалуйста исправьте.",
   "recipient_malformed_suggestion": "Неверный адрес получателя, возможно вы имели в виду __recipient__?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Публичный ключ этого счета уже анонсирован. Вместо этого пожалуйста используйте номер счета.",
   "recipient_unknown": "Счет получателя является неизвестным аккаунтом, что означает, что он никогда не имел входящих или исходящих транзакций. Пожалуйста, проверьте адрес получателя перед отправкой.",
   "recipient_unknown_pka": "Счет получателя неизвестен, это означает, что в нем нет ни входящих, ни исходящих транзакций. Для отправки этого запроса необходимо также указать публичный ключ получателя.",
+  "recipients": "Получатели",
   "record": "запись",
   "referenced_transaction_full_hash": "Полный хэш указанной транзакции",
   "referenced_transaction_hash": "Хэш Связанной Транзакции",
@@ -750,9 +766,11 @@
   "remove_from_group": "Удалить из группы",
   "repeat": "Повторить",
   "request_burst": "Request BURST",
+  "request_processing_time": "Время обработки запроса",
   "returning_user_q": "Зарегистрированный пользователь?",
   "reward_recipient": "Получатель вознаграждения",
   "same_out": "Same Amount",
+  "scoop_num": "Номер совка",
   "search_aliases": "Поиск Псевдонимов...",
   "search_assets": "Поиск активов...",
   "search_by_id": "Поиск по ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Отправить сообщение",
   "send_message_to_sender": "Отправить сообщение отправителю",
   "sender": "Отправитель",
+  "sender_address": "Адрес отправителя",
+  "sender_id": "Удостоверение личности отправителя",
   "sender_public_key": "Открытый ключ отправителя",
   "server_error_unknown": "Произошла неизвестная ошибка.",
   "set_account_info": "Установить информацию аккаунта",
@@ -790,12 +810,14 @@
   "settings": "Настройки",
   "share_address": "Поделиться Адресом",
   "show_console_log_button": "Показать кнопку Журнал консоли",
+  "signature": "Подпись",
   "signature_hash": "Хэш Подписи",
   "signed_transaction_bytes": "Подписанные байты транзакции",
   "smart_contract": "Смарт Контракт",
   "smart_contract_creation": "Создание смарт-контракта",
   "smart_contract_payment": "Оплата Смарт Контракт",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Гладкая кривая",
   "standard_fee": "стандарт",
   "start_date": "Дата начала",
   "start_forging": "Начать Форжинг",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Имя группы успешно обновлено.",
   "success_hash_verification": "Скачанная версия была проверена, хэш-код является правильным. Вы можете продолжить установку.",
   "success_issue_asset": "Актив был создан и будет доступен в ближайшее время.",
+  "success_lease_balance": "Ваш баланс будет сдан в аренду в 1440 блоках.",
   "success_message_sent": "Ваше сообщение было отправлено.",
   "success_messages_decrypt": "Сообщение(я) успешно расшифровано(ы).",
   "success_passphrase_confirmed": "Парольная фраза подтверждена успешно, теперь вы вошли в систему.",
@@ -953,6 +976,7 @@
   "website_or_text": "Веб-сайт или текст",
   "welcome_to_burst": "Добро пожаловать в Burst!",
   "with_burst": "С BURST",
+  "wrong_pin": "Неверный PIN-код",
   "x_confirmations": "__x__ подтверждений",
   "yes": "Да",
   "yesterdays_change": "Вчерашние перемены",
