--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -49,6 +49,7 @@
   "all_blocks": "Сви Блокови",
   "all_transactions": "Све Трансакције",
   "amount": "Количина",
+  "amount_nqt": "Износ",
   "amount_plus_fee": "Износ + Провизија",
   "and_logout": "и одјавите се",
   "animate_forging_indicator": "Активирајте Индикатор Ковања",
@@ -96,9 +97,13 @@
   "block": "Блок",
   "block_details": "Детаљи Блока",
   "block_generation_time": "Време генерисања блока",
+  "block_height": "Блоцк Хеигхт",
+  "block_id": "ИД блока",
+  "block_reward": "Блоцк Ревард",
   "block_signature": "Потпис Блока",
   "block_timestamp": "Временски Печат Блока",
   "blocks": "Блокови",
+  "blocks_details": "Блоцк Детаилс",
   "bookmark_asset": "Додајте овај ассет у пречице",
   "broadcast": "Емитујте",
   "broadcast_transaction": "Емитуј Трансакцију",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Блоцкцхаин се Преузима",
   "downloading_update": "Ажурирање се преузима. Бићеш обавештен када заврши.",
   "drop_update": "Спустите ажурирани клијент (зип фајл) овде када се заврши преузимање или кликните овде да бисте изабрали.",
+  "ec_block_height": "ЕЦ Блоцк Хеигхт",
+  "ec_block_id": "ЕЦ Блоцк ИД",
   "edit": "Уредите",
   "effective_balance": "Ефективни Салдо",
   "email_address": "Е-маил Адреса",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Није успело",
   "fee": "Провизија",
+  "fee_nqt": "Фее",
   "feedback": "Повратне информације",
   "feedback_given": "Повратна Информација је Остављена",
   "feedback_note": "Порука Повратне Информације",
@@ -470,6 +478,8 @@
   "generated_token_is": "Генерисан токен је:",
   "generation_signature": "Генерисање Потписа",
   "generator": "Генератор",
+  "generator_address": "Адреса генератора",
+  "generator_id": "Генератор ИД",
   "generator_public_key": "Генератор Јавног Кључа",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Оставите повратну информацију",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Нема трансакција у овом блоку.",
   "no_transactions_yet": "Без трансакција.",
   "non_verified_source": "Непознати, потенцијално несигуран извор",
+  "nonce": "Нонце",
   "none": "Ништа",
   "not_delivered_in_time": "Није испоручено на време",
   "not_forging": "Тренутно не кујете",
@@ -641,6 +652,7 @@
   "nr_votes": "# Гласови",
   "number_of_trades": "Број Трговања",
   "number_of_transactions": "Број Трансакција",
+  "number_transactions": "Број трансакција",
   "numeric_account_id": "Нумерички ИД Налога",
   "official_hash": "Званични Hash",
   "old_browser_warning": "Користите стари претраживач који ова апликација не подржава.",
@@ -670,8 +682,9 @@
   "payload": "Плаћени Терет",
   "payload_hash": "Тежина Hash-а",
   "payload_length": "Payload Length",
-  "payment": "",
+  "payment": "Плаћање",
   "payment_with_message": "Плаћање са Поруком",
+  "payments": "Плаћања",
   "peer": "Пеер",
   "peers": "Peers",
   "pending": "На чекању",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Недавне трансакције од",
   "recipient": "Прималац",
   "recipient_account": "Налог Примаоца",
+  "recipient_address": "Прималац адреса",
   "recipient_alias_suggestion": "Ако желите да куцате алиас, испред алиас-а куцајте @ карактер.",
+  "recipient_id": "ИД примаоца",
   "recipient_info": "Налог примаоца поседује јавни кључ и салдо од __burst__ BURST.",
   "recipient_malformed": "Налог примаоца је погрешан, молимо исправите унос.",
   "recipient_malformed_suggestion": "Адреса примаоца је неправилна, јесте ли мислили __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Јавни кључ овог налога је већ оглашен. Користите ИД налога уместо јавног кључа.",
   "recipient_unknown": "Налог примаоца је непознат налог, што значи да никада није имао долазећу или одлазећу трансакцију. Молимо Вас да проверите још једном адресу примаоца пре него што наставите.",
   "recipient_unknown_pka": "Налог примаоца је непознат налог, што значи да никада није имао долазну или oдлазну трансакцију. Да бисте потврдили ваш избор морате да прецизирате јавни кључ примаоца.",
+  "recipients": "Приматељи",
   "record": "Запис",
   "referenced_transaction_full_hash": "Комплетан Hash Референтне Трансакције",
   "referenced_transaction_hash": "Hash Означене Трансакције",
@@ -750,9 +766,11 @@
   "remove_from_group": "Избришите из Групе",
   "repeat": "Поновите",
   "request_burst": "Request BURST",
+  "request_processing_time": "Рекуест Процессинг Тиме",
   "returning_user_q": "Корисник Повратник?",
   "reward_recipient": "Ревард Реципиент",
   "same_out": "Same Amount",
+  "scoop_num": "Сцооп Нумбер",
   "search_aliases": "Тражите Алиас-е...",
   "search_assets": "Претражи Асcет-е...",
   "search_by_id": "Тражите по ID-у...",
@@ -783,6 +801,8 @@
   "send_message_button": "Пошаљите Поруку",
   "send_message_to_sender": "Пошаљите Поруку Пошиљаоцу",
   "sender": "Пошиљалац",
+  "sender_address": "Адреса пошиљатеља",
+  "sender_id": "ИД пошиљаоца",
   "sender_public_key": "Јавни Кључ Пошиљаоца",
   "server_error_unknown": "Појавила се непозната грешка.",
   "set_account_info": "Поставите Информације Налога",
@@ -790,12 +810,14 @@
   "settings": "Подешавања",
   "share_address": "Подели Адресу",
   "show_console_log_button": "Прикажи Лог Дугме Конзоле",
+  "signature": "Потпис",
   "signature_hash": "Hash Потпис",
   "signed_transaction_bytes": "Потписана Трансакција Bytes",
   "smart_contract": "Смарт Цонтрацт",
   "smart_contract_creation": "Стварање паметних уговора",
   "smart_contract_payment": "Плаћање паметног уговора",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Смоотх Цурве",
   "standard_fee": "Стандард",
   "start_date": "Почетни Датум",
   "start_forging": "Почните Ковати",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Име групе успешно измењено.",
   "success_hash_verification": "Преузета верзија је проверена, hash је исправан. Можете наставити с инсталацијом.",
   "success_issue_asset": "Ассет је успешно креиран и биће ускоро доступан.",
+  "success_lease_balance": "Ваш салдо ће бити изнајмљен у 1440 блокова.",
   "success_message_sent": "Ваша порука је послана.",
   "success_messages_decrypt": "Порука(ке) успешно дешифрована.",
   "success_passphrase_confirmed": "Лозинка је тачна, успешно сте ушли у свој налог.",
@@ -953,6 +976,7 @@
   "website_or_text": "Wеб сајт или Текст",
   "welcome_to_burst": "Добродошли у BURST!",
   "with_burst": "Са BURST-ом",
+  "wrong_pin": "Погрешан ПИН",
   "x_confirmations": "__x__ конфирмација",
   "yes": "Да",
   "yesterdays_change": "Јучерашња промена",
