--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -49,6 +49,7 @@
   "all_blocks": "Всички блокове",
   "all_transactions": "Всички сделки",
   "amount": "Сума",
+  "amount_nqt": "Количество",
   "amount_plus_fee": "Сума + Такса",
   "and_logout": "и изход",
   "animate_forging_indicator": "Анимиране индикатора за коване",
@@ -96,9 +97,13 @@
   "block": "Блок",
   "block_details": "Детайли за блока",
   "block_generation_time": "Време за генериране на блок",
+  "block_height": "Височина на блока",
+  "block_id": "ID на блок",
+  "block_reward": "Блокирайте награда",
   "block_signature": "Блок подпис",
   "block_timestamp": "Блок времеви маркер",
   "blocks": "Блокове",
+  "blocks_details": "Подробности за блока",
   "bookmark_asset": "Маркирайте този актив",
   "broadcast": "Излъчване",
   "broadcast_transaction": "Излъчване на сделката",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Изтегляне на блокверигата",
   "downloading_update": "Актуализацията се изтегля. Ще бъдете информирани, след като приключи.",
   "drop_update": "Прехвърлете тук обновяването на клиента (zip файл), когато изтеглянето приключи, или щракнете за избор.",
+  "ec_block_height": "Височина на блока на ЕО",
+  "ec_block_id": "Идентификационен номер на блок ЕО",
   "edit": "Редактиране",
   "effective_balance": "Ефективно салдо",
   "email_address": "E-mail адрес",
@@ -441,6 +448,7 @@
   "export_contact": "Експортирай контактите",
   "failed": "Неуспешно",
   "fee": "Такса",
+  "fee_nqt": "Такса",
   "feedback": "Отзиви",
   "feedback_given": "Предоставена обратна информация",
   "feedback_note": "Бележка отзив",
@@ -470,6 +478,8 @@
   "generated_token_is": "Генерираният маркер е: ",
   "generation_signature": "Създаване на подпис",
   "generator": "Генератор",
+  "generator_address": "Адрес на генератора",
+  "generator_id": "ID на генератора",
   "generator_public_key": "Генератор публичен ключ",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Дайте обратна връзка",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Няма сделки в този блок.",
   "no_transactions_yet": "Все още няма сделки.",
   "non_verified_source": "Неизвестен, потенциално несигурен източник",
+  "nonce": "дадения случай",
   "none": "Няма",
   "not_delivered_in_time": "Не доставен навреме",
   "not_forging": "Не кове",
@@ -641,6 +652,7 @@
   "nr_votes": "# Гласа",
   "number_of_trades": "Брой сделки",
   "number_of_transactions": "Брой сделки",
+  "number_transactions": "Брой транзакции",
   "numeric_account_id": "Цифрова сметка ID",
   "official_hash": "Официален хеш",
   "old_browser_warning": "Вие използвате стар браузър, който не поддържа това приложение.",
@@ -672,6 +684,7 @@
   "payload_length": "Съдържание дължина",
   "payment": "плащане",
   "payment_with_message": "Плащане и съобщение",
+  "payments": "Плащания",
   "peer": "Партньор",
   "peers": "Партньори",
   "pending": "Чакащи",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Последните сделки оттогава",
   "recipient": "Получател",
   "recipient_account": "Сметка на получателя",
+  "recipient_address": "Адрес на получателя",
   "recipient_alias_suggestion": "Ако искате да въведедете псевдоним, добавете знака @ като представка.",
+  "recipient_id": "ID на получателя",
   "recipient_info": "Сметката на получателя има публичен ключ и наличност от __BURST__ BURST.",
   "recipient_malformed": "Сметката на получателя е неправилно форматирана, моля поправете.",
   "recipient_malformed_suggestion": "Адреса на получателя е неправилно форматиран, имате в предвид __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Публичният ключ на тази сметка е вече обявен. Вместо него използвайте ID на сметката.",
   "recipient_unknown": "Сметката на получателя е неизвестна, което означава, че никога не е имала входяща или изходяща сделки. Моля проверете адреса на получателя преди това.",
   "recipient_unknown_pka": "Сметката на получателя е от неизвестен тип, което означава, че никога не е имала входяща или изходяща операция. Можете да увеличите защитата чрез предоставяне публичен ключ на получателя.",
+  "recipients": "Получатели",
   "record": "рекорд",
   "referenced_transaction_full_hash": "Пълен хеш на свързана сделка",
   "referenced_transaction_hash": "Хеш на свързана сделка",
@@ -750,9 +766,11 @@
   "remove_from_group": "Премахни от група",
   "repeat": "Повтори",
   "request_burst": "Request BURST",
+  "request_processing_time": "Заявете време за обработка",
   "returning_user_q": "Връщащ се потребител?",
   "reward_recipient": "Награда Получател",
   "same_out": "Same Amount",
+  "scoop_num": "Номер на лъжичка",
   "search_aliases": "Търси псевдоними...",
   "search_assets": "Търси активи...",
   "search_by_id": "Търсене по ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Изпрати съобщение",
   "send_message_to_sender": "Изпрати съобщение на подателя",
   "sender": "Подател",
+  "sender_address": "Адрес на подателя",
+  "sender_id": "ID на подателя",
   "sender_public_key": "Публичен ключ на подателя",
   "server_error_unknown": "Възникна неизвестна грешка.",
   "set_account_info": "Задайте информация за сметка",
@@ -790,12 +810,14 @@
   "settings": "Настройки",
   "share_address": "Сподели адрес",
   "show_console_log_button": "Показване на бутон дневник конзола",
+  "signature": "Подпис",
   "signature_hash": "Подпис хеш",
   "signed_transaction_bytes": "Байта на подписана сделка",
   "smart_contract": "Смарт договор",
   "smart_contract_creation": "Създаване на интелигентен договор",
   "smart_contract_payment": "Плащане на интелигентен договор",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Гладка крива",
   "standard_fee": "стандарт",
   "start_date": "От дата",
   "start_forging": "Започни коване",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Името на групата е актуализирано успешно.",
   "success_hash_verification": "Изтеглената версия е проверена, стойността на хеша е правилна. Можете да продължите с инсталирането.",
   "success_issue_asset": "Активът е създаден и ще бъде достъпен скоро.",
+  "success_lease_balance": "Балансът ви ще бъде отдаден в 1440 блока.",
   "success_message_sent": "Вашето съобщение е изпратено.",
   "success_messages_decrypt": "Съобщението(ята) е дешифрирано успешно.",
   "success_passphrase_confirmed": "Паролата е потвърдена успешно, вече сте в системата.",
@@ -953,6 +976,7 @@
   "website_or_text": "Уебсайт или текст",
   "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
+  "wrong_pin": "Грешен ПИН",
   "x_confirmations": "__x__ потвърждения",
   "yes": "Да",
   "yesterdays_change": "Промяна вчера",
