--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -49,6 +49,7 @@
   "all_blocks": "Tots els Blocs",
   "all_transactions": "Totes les transaccions",
   "amount": "Quantitat",
+  "amount_nqt": "Quantitat",
   "amount_plus_fee": "Total + Comisió",
   "and_logout": "i Desconnectar-se",
   "animate_forging_indicator": "Indicador de Forja animat",
@@ -96,9 +97,13 @@
   "block": "Bloc",
   "block_details": "Detalls del Bloc",
   "block_generation_time": "Temps de generació del Bloc",
+  "block_height": "Alçada del bloc",
+  "block_id": "Identificador de bloc",
+  "block_reward": "Bloc recompensa",
   "block_signature": "Signatura del Bloc",
   "block_timestamp": "Marca de Temps del Bloc",
   "blocks": "Blocs",
+  "blocks_details": "Detalls del bloc",
   "bookmark_asset": "Afegir a Favorits aquest Actiu",
   "broadcast": "Transmetre",
   "broadcast_transaction": "Transmetre la Transacció",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Descarregant Blockchain",
   "downloading_update": "S’ha descarregat l’actualització. Se l'informarà un cop hagi acabat.",
   "drop_update": "Arrossegui la actualització del client (el arxiu zip) aquí o cliqui per seleccionar.",
+  "ec_block_height": "Alçada del bloc CE",
+  "ec_block_id": "Identificador de bloc CE",
   "edit": "Editar",
   "effective_balance": "Saldo Efectiu",
   "email_address": "Adreça de correu electrònic",
@@ -441,6 +448,7 @@
   "export_contact": "Exportar els contactes",
   "failed": "Error",
   "fee": "Taxa",
+  "fee_nqt": "Taxa",
   "feedback": "Comentaris",
   "feedback_given": "Comentaris enviats",
   "feedback_note": "Comentari",
@@ -470,6 +478,8 @@
   "generated_token_is": "El Token generat és: ",
   "generation_signature": "Generació de la signatura",
   "generator": "Generador",
+  "generator_address": "Adreça del generador",
+  "generator_id": "ID del generador",
   "generator_public_key": "Generar Clau Pública",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Fes-nos comentaris",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Cap transacció en aquest bloc.",
   "no_transactions_yet": "Encara no hi ha cap transacció.",
   "non_verified_source": "Font desconeguda i potencialment insegura",
+  "nonce": "Nonce",
   "none": "Cap",
   "not_delivered_in_time": "No lliurat a temps",
   "not_forging": "sense Forjar",
@@ -641,6 +652,7 @@
   "nr_votes": "# Vots",
   "number_of_trades": "Nombre d'opereacions",
   "number_of_transactions": "Nombre de Transaccions",
+  "number_transactions": "Nombre d’operacions",
   "numeric_account_id": "Numèric ID del Compte",
   "official_hash": "Hash Oficial",
   "old_browser_warning": "Esteu utilitzant un navegador antic que no és compatible amb aquesta aplicació.",
@@ -672,6 +684,7 @@
   "payload_length": "Longitud de la Càrrega",
   "payment": "Pagament",
   "payment_with_message": "Pagament amb Missatge",
+  "payments": "Pagaments",
   "peer": "Parell",
   "peers": "Parells",
   "pending": "Pendent",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Transaccions recents des de",
   "recipient": "Destinatari",
   "recipient_account": "Compte del Destinatari",
+  "recipient_address": "Adreça del destinatari",
   "recipient_alias_suggestion": "Si voleu escriure un àlies, afegiu @ al principi.",
+  "recipient_id": "Identificador del destinatari",
   "recipient_info": "El compte del destinatari té una clau pública i un saldo de __burst__ burst.",
   "recipient_malformed": "El compte del destinatari és incorrecte, si us plau reviseu-lo.",
   "recipient_malformed_suggestion": "L'adreça del destinatari és incorrecte, et refereixes a __recipient__?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Ja s'ha anunciat la clau pública d'aquest compte. Utilitzeu el ID del Compte.",
   "recipient_unknown": "El compte del destinatari és un compte desconegut, és a dir, que mai ha fet una transacció. Si us plau torneu a comprovar si el seu destinatari és correcte abans d'enviar.",
   "recipient_unknown_pka": "El compte del destinatari és un compte desconegut, és a dir, que no ha fet mai una transacció. Vostè pot augmentar la seguretat proporcionant la clau pública del destinatari.",
+  "recipients": "Destinataris",
   "record": "Registre",
   "referenced_transaction_full_hash": "Hash complert de la transacció de referència",
   "referenced_transaction_hash": "Transacció de Hash referenciada",
@@ -750,9 +766,11 @@
   "remove_from_group": "Eliminar del Grup",
   "repeat": "Repetir",
   "request_burst": "Request BURST",
+  "request_processing_time": "Temps de processament de sol·licituds",
   "returning_user_q": "Usuari existent?",
   "reward_recipient": "Destinatari de recompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Número d’escola",
   "search_aliases": "Cercar Àlies...",
   "search_assets": "Cercar Actius...",
   "search_by_id": "Cercar per ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Envia Missatge",
   "send_message_to_sender": "Enviar missatge a l'emissor",
   "sender": "Emissor",
+  "sender_address": "Adreça del remitent",
+  "sender_id": "Identificador del remitent",
   "sender_public_key": "Clau Pública del remitent",
   "server_error_unknown": "S'ha produït un error desconegut.",
   "set_account_info": "Establiu la Informació del Compte",
@@ -790,12 +810,14 @@
   "settings": "Configuració",
   "share_address": "Compartir Adreça",
   "show_console_log_button": "Mostrar el botó per Iniciar la Consola",
+  "signature": "Signatura",
   "signature_hash": "Hash de la Firma",
   "signed_transaction_bytes": "Bytes de la Transacció Firmada",
   "smart_contract": "Contracte intel·ligent",
   "smart_contract_creation": "Creació de contractes intel·ligents",
   "smart_contract_payment": "Pagament del contracte intel·ligent",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Corba suau",
   "standard_fee": "Estàndard",
   "start_date": "Data d'inici",
   "start_forging": "Començar a Forjar",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Nom de Grup actualitzat correctament.",
   "success_hash_verification": "La versió descarregada ha estat verificada, el Hash és correcte. Vostè pot continuar amb la instal·lació.",
   "success_issue_asset": "L'Actiu s'ha creat i aviat estarà disponible.",
+  "success_lease_balance": "El vostre saldo serà arrendat en 1440 blocs.",
   "success_message_sent": "El seu missatge ha estat enviat.",
   "success_messages_decrypt": "Missatge(s) desxifrat(s) correctament.",
   "success_passphrase_confirmed": "Contrasenya confirmada amb èxit, ara estàs connectat.",
@@ -953,6 +976,7 @@
   "website_or_text": "Pàgina Web o Text",
   "welcome_to_burst": "Benvinguts a burst!",
   "with_burst": "Amb burst",
+  "wrong_pin": "PIN incorrecte",
   "x_confirmations": "__x__ confirmacions",
   "yes": "Si",
   "yesterdays_change": "Canvi d’ahir",
