--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -49,6 +49,7 @@
   "all_blocks": "Alle Blöcke",
   "all_transactions": "Alle Transaktionen",
   "amount": "Menge",
+  "amount_nqt": "Betrag",
   "amount_plus_fee": "Betrag + Gebühr",
   "and_logout": "und Ausloggen",
   "animate_forging_indicator": "Blockgenerierungsanzeige animieren",
@@ -96,9 +97,13 @@
   "block": "Block",
   "block_details": "Blockdetails",
   "block_generation_time": "Durchschnittliche Blockdauer",
+  "block_height": "Blockhöhe",
+  "block_id": "Block ID",
+  "block_reward": "Block Belohnung",
   "block_signature": "Blocksignatur",
   "block_timestamp": "Blockzeitpunkt",
   "blocks": "Blöcke",
+  "blocks_details": "Details blockieren",
   "bookmark_asset": "Fügen Sie dieses Asset den Lesezeichen hinzu",
   "broadcast": "Veröffentlichen",
   "broadcast_transaction": "Transaktion veröffentlichen",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Blockchain wird heruntergeladen",
   "downloading_update": "Das Update wird heruntergeladen. Sie werden informiert, sobald es fertig ist.",
   "drop_update": "Ziehen Sie die Client-Aktualisierung (Zip-Datei) nach dem Download hierher oder klicken Sie hier, um auszuwählen.",
+  "ec_block_height": "EC-Blockhöhe",
+  "ec_block_id": "EC-Block-ID",
   "edit": "Bearbeiten",
   "effective_balance": "Effektives Guthaben",
   "email_address": "E-Mail-Adresse",
@@ -441,6 +448,7 @@
   "export_contact": "Kontakte exportieren",
   "failed": "Fehlgeschlagen",
   "fee": "Gebühr",
+  "fee_nqt": "Gebühr",
   "feedback": "Feedback",
   "feedback_given": "Feedback abgegeben",
   "feedback_note": "Feedback-Hinweis",
@@ -470,6 +478,8 @@
   "generated_token_is": "Das generierte Token lautet:",
   "generation_signature": "Generierungshash",
   "generator": "Generator",
+  "generator_address": "Generatoradresse",
+  "generator_id": "Generator ID",
   "generator_public_key": "Öffentlicher Schlüssel des Generierers",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Feedback geben",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Keine Transaktionen in diesem Block.",
   "no_transactions_yet": "Noch keine Transaktionen.",
   "non_verified_source": "Unbekannte, möglicherweise unsichere Quelle",
+  "nonce": "Nonce",
   "none": "Keine",
   "not_delivered_in_time": "Nicht rechtzeitig geliefert",
   "not_forging": "Keine Blockgenerierung",
@@ -641,6 +652,7 @@
   "nr_votes": "# Stimmen",
   "number_of_trades": "Anzahl der Trades",
   "number_of_transactions": "Anzahl der Transaktionen",
+  "number_transactions": "Anzahl der Transaktionen",
   "numeric_account_id": "Numerische Konto-ID",
   "official_hash": "Offizieller Hash",
   "old_browser_warning": "Sie benutzen einen alten Browser, den diese Anwendung nicht unterstützt.",
@@ -672,6 +684,7 @@
   "payload_length": "Nutzdatenlänge",
   "payment": "Zahlung",
   "payment_with_message": "Zahlung mit Nachricht",
+  "payments": "Zahlungen",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "Ausstehend",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Letzte Transaktionen seit",
   "recipient": "Empfänger",
   "recipient_account": "Empfängerkonto",
+  "recipient_address": "Empfängeradresse",
   "recipient_alias_suggestion": "Wenn Sie einen Alias eingeben möchten, stellen Sie ein @-Zeichen voran.",
+  "recipient_id": "Empfänger-ID",
   "recipient_info": "Das Empfängerkonto verfügt über einen öffentlichen Schlüssel und ein Guthaben über __burst__ BURST.",
   "recipient_malformed": "Das Empfängerkonto ist ungültig, bitte anpassen.",
   "recipient_malformed_suggestion": "Die Empfängeradresse hat das falsche Format, meinten Sie __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Der öffentliche Schlüssel dieses Kontos wurde bereits angekündigt. Verwenden Sie stattdessen die Konto-ID.",
   "recipient_unknown": "Das Empfängerkonto ist ein unbekanntes Konto. Das bedeutet, es verfügt über keine eingehenden oder ausgehenden Transaktionen. Bitte überprüfen Sie noch einmal die Empfängeradresse vor dem Absenden.",
   "recipient_unknown_pka": "Das Empfänger-Konto ist ein unbekanntes Konto, was bedeutet, dass es weder eingehende noch ausgehende Transaktion gehabt hat. Um diese Anforderung zu senden, müssen Sie den öffentlichen Schlüssel des Empfängers mit angeben.",
+  "recipients": "Empfänger",
   "record": "Aufzeichnen",
   "referenced_transaction_full_hash": "Vollständiger Hash der Referenztransaktion",
   "referenced_transaction_hash": "Hash der Referenztransaktion",
@@ -750,9 +766,11 @@
   "remove_from_group": "Aus Gruppe entfernen",
   "repeat": "Wiederholen",
   "request_burst": "Request BURST",
+  "request_processing_time": "Bearbeitungszeit anfordern",
   "returning_user_q": "Konto bereits vorhanden?",
   "reward_recipient": "Belohnungsempfänger",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop-Nummer",
   "search_aliases": "Suche Aliasse...",
   "search_assets": "Suche Assets...",
   "search_by_id": "Suche nach ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Nachricht senden",
   "send_message_to_sender": "Nachricht an Absender senden",
   "sender": "Absender",
+  "sender_address": "Absenderadresse",
+  "sender_id": "Absenderidentität",
   "sender_public_key": "Öffentlicher Schlüssel des Absenders",
   "server_error_unknown": "Ein unbekannter Fehler ist aufgetreten.",
   "set_account_info": "Kontoinformationen angeben",
@@ -790,12 +810,14 @@
   "settings": "Einstellungen",
   "share_address": "Adresse weitergeben",
   "show_console_log_button": "Schaltfläche für Konsole anzeigen",
+  "signature": "Unterschrift",
   "signature_hash": "Signaturhash",
   "signed_transaction_bytes": "Signierte Transaktionsbytes",
   "smart_contract": "Smart Contract",
   "smart_contract_creation": "Smart Contract Erstellung",
   "smart_contract_payment": "Bezahlung von Smart Contract",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Glatte Kurve",
   "standard_fee": "Standard",
   "start_date": "Startdatum",
   "start_forging": "Blockgeneration starten",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Gruppenname erfolgreich aktualisiert.",
   "success_hash_verification": "Die heruntergeladene Version ist überprüft worden, die Prüfsumme ist korrekt. Sie können mit der Installation fortfahren.",
   "success_issue_asset": "Das Asset wurde erstellt und wird in Kürze verfügbar sein.",
+  "success_lease_balance": "Ihr Guthaben wird in 1440 Blöcken vermietet.",
   "success_message_sent": "Ihre Nachricht wurde gesendet.",
   "success_messages_decrypt": "Nachricht(en) erfolgreich entschlüsselt.",
   "success_passphrase_confirmed": "Die Passphrase wurde bestätigt. Sie sind jetzt eingeloggt.",
@@ -953,6 +976,7 @@
   "website_or_text": "Webseite oder Text",
   "welcome_to_burst": "Willkommen bei Burst!",
   "with_burst": "Mit BURST",
+  "wrong_pin": "Falsche PIN",
   "x_confirmations": "__x__ Bestätigungen",
   "yes": "Ja",
   "yesterdays_change": "Veränderung zu Gestern",
