--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -49,6 +49,7 @@
   "all_blocks": "Όλα τα μπλοκ",
   "all_transactions": "Όλες οι συναλλαγές",
   "amount": "Ποσό",
+  "amount_nqt": "Ποσό",
   "amount_plus_fee": "Ποσό + προμήθεια",
   "and_logout": "και αποσύνδεση",
   "animate_forging_indicator": "ενεργοποίηση δείκτη Forging",
@@ -96,9 +97,13 @@
   "block": "Μπλοκ",
   "block_details": "λεπτομέρειες Μπλοκ",
   "block_generation_time": "χρόνος δημιουργίας Μπλοκ",
+  "block_height": "Ύψος μπλοκ",
+  "block_id": "Αναγνωριστικό μπλοκ",
+  "block_reward": "Αποκλεισμός ανταμοιβής",
   "block_signature": "Block Signature",
   "block_timestamp": "Block Timestamp",
   "blocks": "Μπλοκ",
+  "blocks_details": "Αποκλεισμός στοιχείων",
   "bookmark_asset": "Σελιδοδείκτης αυτής της μετοχής",
   "broadcast": "μετάδοση",
   "broadcast_transaction": "Κοινοποίηση συναλλαγής",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "λήψη Blockchain",
   "downloading_update": "Η ενημέρωση γίνεται λήψη. Θα ενημερωθείτε μόλις ολοκληρωθεί.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
+  "ec_block_height": "Ύψος μπλοκ ΕΚ",
+  "ec_block_id": "Αναγνωριστικό δέσμης EC",
   "edit": "Επεξεργασία",
   "effective_balance": "διαθέσιμο ποσό",
   "email_address": "Διεύθυνση Email",
@@ -441,6 +448,7 @@
   "export_contact": "Εξαγωγή επαφών",
   "failed": "απέτυχε",
   "fee": "Προμήθεια",
+  "fee_nqt": "Τέλη",
   "feedback": "Απάντηση / Αξιολόγηση",
   "feedback_given": "Aνταπόκριση εστάλθηκε",
   "feedback_note": "Feedback Note",
@@ -470,6 +478,8 @@
   "generated_token_is": "The generated token is:",
   "generation_signature": "Υπογραφή δημιουργίας",
   "generator": "Γεννήτρια",
+  "generator_address": "Διεύθυνση γεννήτριας",
+  "generator_id": "Αναγνωριστικό γεννήτριας",
   "generator_public_key": "Generator Public Key",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Θέλετε να δώσετε αξιολόγηση;",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "Δεν υπάρχουν συναλλαγές ακόμα.",
   "non_verified_source": "Άγνωστη, δυνητικά ανασφαλής πηγή",
+  "nonce": "Μην",
   "none": "Τίποτα",
   "not_delivered_in_time": "Δεν παραδόθηκε εγκαίρως",
   "not_forging": "Not Forging",
@@ -641,6 +652,7 @@
   "nr_votes": "# Ψηφοφορίες",
   "number_of_trades": "Αριθμός συναλλαγών",
   "number_of_transactions": "Number of Transactions",
+  "number_transactions": "Αριθμός συναλλαγών",
   "numeric_account_id": "Αριθμητικό ID λογαριασμού",
   "official_hash": "Official Hash",
   "old_browser_warning": "You are using an old Internet Explorer. Please update your IE or open localhost:8125 with your favorite Browser!",
@@ -672,6 +684,7 @@
   "payload_length": "Payload Length",
   "payment": "Πληρωμή",
   "payment_with_message": "Payment With Message",
+  "payments": "Πληρωμές",
   "peer": "Κόμβος",
   "peers": "Κόμβοι",
   "pending": "Σε αναμονή",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Πρόσφατες συναλλαγές από τότε",
   "recipient": "Παραλήπτης",
   "recipient_account": "Recipient Account",
+  "recipient_address": "Διεύθυνση παραλήπτη",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
+  "recipient_id": "Αναγνωριστικό παραλήπτη",
   "recipient_info": "Ο λογαριασμός του παραλήπτη έχει δημόσιο κλειδί και το υπόλοιπό του ανέρχεται σε __burst__ burst.",
   "recipient_malformed": "Λογαριασμός του δικαιούχου είναι λανθασμένος, παρακαλούμε να το διορθώστε.",
   "recipient_malformed_suggestion": "Η διεύθυνση του παραλήπτη είναι λανθασμένη, μήπως εννοείτε __recipient__;",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "recipients": "Παραλήπτες",
   "record": "Ρεκόρ",
   "referenced_transaction_full_hash": "Πλήρη Hash αναφερόμενης συναλλαγής",
   "referenced_transaction_hash": "Συσχετισμένο Hash της συναλλαγής",
@@ -750,9 +766,11 @@
   "remove_from_group": "Remove From Group",
   "repeat": "Επανάληψη",
   "request_burst": "Request BURST",
+  "request_processing_time": "Ζήτηση χρόνου επεξεργασίας",
   "returning_user_q": "Επιστροφή χρήστη;",
   "reward_recipient": "Ανταμοιβή παραλήπτη",
   "same_out": "Same Amount",
+  "scoop_num": "Αριθμός Scoop",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
   "search_by_id": "Αναζήτηση μέσω ταυτότητας...",
@@ -783,6 +801,8 @@
   "send_message_button": "Αποστολή μηνύματος",
   "send_message_to_sender": "Στείλτε μήνυμα στον αποστολέα",
   "sender": "Αποστολέας",
+  "sender_address": "Διεύθυνση αποστολέα",
+  "sender_id": "ταυτότητα αποστολέα",
   "sender_public_key": "Δημόσιο κλειδί αποστολέα",
   "server_error_unknown": "Παρουσιάστηκε ένα άγνωστο σφάλμα.",
   "set_account_info": "Θέτω πληροφορίες λογαριασμού",
@@ -790,12 +810,14 @@
   "settings": "Ρυθμίσεις",
   "share_address": "Μοιραστείτε τη διεύθυνση",
   "show_console_log_button": "Show Console Log Button",
+  "signature": "Υπογραφή",
   "signature_hash": "Signature Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
   "smart_contract": "Έξυπνη σύμβαση",
   "smart_contract_creation": "Δημιουργία έξυπνης σύμβασης",
   "smart_contract_payment": "Πληρωμή της έξυπνης σύμβασης",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Λεία καμπύλη",
   "standard_fee": "Πρότυπο",
   "start_date": "Ημερομηνία έναρξης",
   "start_forging": "Ξεκινήστε Forging",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Το όνομα της ομάδας ενημερώθηκε με επιτυχία.",
   "success_hash_verification": "The downloaded version has been verified, the hash is correct. You may proceed with the installation.",
   "success_issue_asset": "Η μετοχή έχει καταγραφεί και θα είναι διαθέσιμη σύντομα.",
+  "success_lease_balance": "Το υπόλοιπό σας θα εκμισθωθεί σε 1440 τετράγωνα.",
   "success_message_sent": "Το μήνυμά σας έχει σταλεί.",
   "success_messages_decrypt": "Τα μηνύματα αποκρυπτογραφήθηκαν με επιτυχία.",
   "success_passphrase_confirmed": "Passphrase confirmed successfully, you are now logged in.",
@@ -953,6 +976,7 @@
   "website_or_text": "Website or Text",
   "welcome_to_burst": "Καλώς ήλθατε στο burst!",
   "with_burst": "Με burst",
+  "wrong_pin": "Λάθος κωδικό PIN",
   "x_confirmations": "__x__ επιβεβαιώσεις",
   "yes": "Ναι",
   "yesterdays_change": "Αλλαγή χθες",
