--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -49,6 +49,7 @@
   "all_blocks": "All Blocks",
   "all_transactions": "All Transactions",
   "amount": "Amount",
+  "amount_nqt": "Amount",
   "amount_plus_fee": "Amount + Fee",
   "and_logout": "and Logout",
   "animate_forging_indicator": "Animate Forging Indicator",
@@ -96,9 +97,13 @@
   "block": "Block",
   "block_details": "Block Details",
   "block_generation_time": "Block Generation Time",
+  "block_height": "Block Height",
+  "block_id": "Block ID",
+  "block_reward": "Block Reward",
   "block_signature": "Block Signature",
   "block_timestamp": "Block Timestamp",
   "blocks": "Blocks",
+  "blocks_details": "Block Details",
   "bookmark_asset": "Bookmark This Asset",
   "broadcast": "Broadcast",
   "broadcast_transaction": "Broadcast Transaction",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Downloading Blockchain",
   "downloading_update": "The update is being downloaded. You'll be informed once it finished.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
+  "ec_block_height": "EC Block Height",
+  "ec_block_id": "EC Block ID",
   "edit": "Edit",
   "effective_balance": "Effective Balance",
   "email_address": "Email Address",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Failed",
   "fee": "Fee",
+  "fee_nqt": "Fee",
   "feedback": "Feedback",
   "feedback_given": "Feedback Given",
   "feedback_note": "Feedback Note",
@@ -470,6 +478,8 @@
   "generated_token_is": "The generated token is:",
   "generation_signature": "Generation Signature",
   "generator": "Generator",
+  "generator_address": "Generator Address",
+  "generator_id": "Generator ID",
   "generator_public_key": "Generator Public Key",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Give Feedback",
@@ -628,6 +638,7 @@
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "No transactions yet.",
   "non_verified_source": "Unknown, potentially insecure source",
+  "nonce": "Nonce",
   "none": "None",
   "not_delivered_in_time": "Not delivered in time",
   "not_forging": "Not Forging",
@@ -650,6 +661,7 @@
   "nr_votes": "# Votes",
   "number_of_trades": "Number of Trades",
   "number_of_transactions": "Number of Transactions",
+  "number_transactions": "Number of Transactions",
   "numeric_account_id": "Numeric Account ID",
   "official_hash": "Official Hash",
   "old_browser_warning": "You are using an old Internet Explorer. Please update your IE or open localhost:8125 with your favorite Browser!",
@@ -681,6 +693,7 @@
   "payload_length": "Payload Length",
   "payment": "Payment",
   "payment_with_message": "Payment With Message",
+  "payments": "Payments",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "Pending",
@@ -726,7 +739,9 @@
   "recent_transactions_since": "Recent transactions since",
   "recipient": "Recipient",
   "recipient_account": "Recipient Account",
+  "recipient_address": "Recipient Address",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
+  "recipient_id": "Recipient ID",
   "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
   "recipient_malformed": "The recipient account is malformed, please adjust.",
   "recipient_malformed_suggestion": "The recipient address is malformed, did you mean __recipient__ ?",
@@ -738,6 +753,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "recipients": "Recipients",
   "record": "Record",
   "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
   "referenced_transaction_hash": "Referenced Transaction Hash",
@@ -759,9 +775,11 @@
   "remove_from_group": "Remove From Group",
   "repeat": "Repeat",
   "request_burst": "Request BURST",
+  "request_processing_time": "Request Processing Time",
   "returning_user_q": "Returning User?",
   "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop Number",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
   "search_by_id": "Search By ID...",
@@ -792,6 +810,8 @@
   "send_message_button": "Send Message",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "Sender",
+  "sender_address": "Sender Address",
+  "sender_id": "Sender ID",
   "sender_public_key": "Sender Public Key",
   "server_error_unknown": "An unknown error occured.",
   "set_account_info": "Set Account Info",
@@ -799,12 +819,14 @@
   "settings": "Settings",
   "share_address": "Share Address",
   "show_console_log_button": "Show Console Log Button",
+  "signature": "Signature",
   "signature_hash": "Signature Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
   "smart_contract": "Smart Contract",
   "smart_contract_creation": "Smart Contract Creation",
   "smart_contract_payment": "Payment of Smart Contract",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Smooth Curve",
   "standard_fee": "Standard",
   "start_date": "Start Date",
   "start_forging": "Start Forging",
@@ -963,6 +985,7 @@
   "website_or_text": "Website or Text",
   "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
+  "wrong_pin": "Wrong PIN",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
   "yesterdays_change": "Yesterday's Change",
