--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -49,6 +49,7 @@
   "all_blocks": "Kaikki lohkot",
   "all_transactions": "Kaikki tapahtumat",
   "amount": "Summa",
+  "amount_nqt": "Määrä",
   "amount_plus_fee": "Summa + siirtomaksu",
   "and_logout": "ja kirjaudu ulos",
   "animate_forging_indicator": "Takominen animaatiolla",
@@ -96,9 +97,13 @@
   "block": "Lohko",
   "block_details": "Lohkon tiedot",
   "block_generation_time": "Lohkon luontiaika",
+  "block_height": "Estä korkeus",
+  "block_id": "Estä tunnus",
+  "block_reward": "Estä palkinto",
   "block_signature": "Lohkon allekirjoitus",
   "block_timestamp": "Lohkon aikaleima",
   "blocks": "Lohkot",
+  "blocks_details": "Estä tiedot",
   "bookmark_asset": "Kirjanmerkki tästä arvopaperista",
   "broadcast": "Lähetys",
   "broadcast_transaction": "Lähetä tapahtuma",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Ladataan lohkoketjua",
   "downloading_update": "Päivitys ladataan. Sinulle ilmoitetaan, kun se on valmis.",
   "drop_update": "Tiputa ohjelman päivitystiedosto (zip) tähän kun se on ladattu, tai klikkaa valitaksesi se.",
+  "ec_block_height": "EC Block Height",
+  "ec_block_id": "EC Block ID",
   "edit": "Muokkaa",
   "effective_balance": "Efektiivinen saldo",
   "email_address": "Sähköpostiosoite",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Epäonnistui",
   "fee": "Siirtomaksu",
+  "fee_nqt": "Maksu",
   "feedback": "Palaute",
   "feedback_given": "Annettu palaute",
   "feedback_note": "Palautteen viesti",
@@ -470,6 +478,8 @@
   "generated_token_is": "Luotu tunnus on:",
   "generation_signature": "Luonnin allekirjoitus",
   "generator": "Luoja",
+  "generator_address": "Generaattorin osoite",
+  "generator_id": "Generaattorin tunnus",
   "generator_public_key": "Luojan julkinen avain",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Anna palautetta",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Ei tapahtumia tässä lohkossa.",
   "no_transactions_yet": "Ei tilitapahtumia.",
   "non_verified_source": "Tuntematon, mahdollisesti turvaton lähde",
+  "nonce": "seksuaalirikollinen",
   "none": "Ei mitään",
   "not_delivered_in_time": "Ei toimitettu ajoissa",
   "not_forging": "Ei taontaa",
@@ -641,6 +652,7 @@
   "nr_votes": "# Äänet",
   "number_of_trades": "Kauppojen lukumäärä",
   "number_of_transactions": "Tapahtumien määrä",
+  "number_transactions": "Tapahtumien lukumäärä",
   "numeric_account_id": "Numeerinen tilinumero",
   "official_hash": "Virallinen tarkiste",
   "old_browser_warning": "Käytät vanhaa selainta, jota tämä sovellus ei tue.",
@@ -672,6 +684,7 @@
   "payload_length": "Hyötykuorman pituus",
   "payment": "maksu",
   "payment_with_message": "Maksu viestin kanssa",
+  "payments": "maksut",
   "peer": "Vertaiskäyttäjä",
   "peers": "Käyttäjät",
   "pending": "Odottava",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Viimeaikaiset tapahtumat vuodesta 2004 lähtien",
   "recipient": "Vastaanottaja",
   "recipient_account": "Vastaanottajan tili",
+  "recipient_address": "Vastaanottajan osoite",
   "recipient_alias_suggestion": "Jos haluat kirjoittaa aliaksen, laita sen eteen @-merkki.",
+  "recipient_id": "Vastaanottajan tunnus",
   "recipient_info": "Vastaanottavalla tilillä on julkinen avain ja tilin saldo on __burst__ BURST.",
   "recipient_malformed": "Vastaanottajan tilinumero on virheellinen. Korjaa se.",
   "recipient_malformed_suggestion": "Vastaanottajan osoite on virheellinen, tarkoititko __recipient__?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Tämän tilin julkinen avain on jo ilmoitettu. Käytä tilinumeroa sen sijaan.",
   "recipient_unknown": "Vastaanottajan tili on tuntematon, eli sillä ei ole yhtään lähtevää tai saapuvaa tilitapahtumaa. Tarkista vielä vastaanottajan tilin oikeellisuus.",
   "recipient_unknown_pka": "Vastaanottajan tili on tuntematon, eli sillä ei ole yhtään saapuvaa tai lähtevää tilitapahtumaa. Jotta voit lähettää tämän pyynnön, sinun täytyy antaa myös vastaanottajan julkinen avain.",
+  "recipients": "vastaanottajat",
   "record": "Ennätys",
   "referenced_transaction_full_hash": "Viitatun tapahtuman koko tarkiste",
   "referenced_transaction_hash": "Viitatun tapahtuman tarkiste",
@@ -750,9 +766,11 @@
   "remove_from_group": "Poista ryhmästä",
   "repeat": "Toista",
   "request_burst": "Request BURST",
+  "request_processing_time": "Pyydä käsittelyaikaa",
   "returning_user_q": "Vanha käyttäjä?",
   "reward_recipient": "Palkinnon saaja",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop-numero",
   "search_aliases": "Hae aliasta...",
   "search_assets": "Etsi arvopaperia...",
   "search_by_id": "Hae ID:llä...",
@@ -783,6 +801,8 @@
   "send_message_button": "Lähetä viesti",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "Lähettäjä",
+  "sender_address": "Lähettäjän osoite",
+  "sender_id": "lähettäjän ID",
   "sender_public_key": "Lähettäjän julkinen avain",
   "server_error_unknown": "Tuntematon virhe.",
   "set_account_info": "Määritä tilin tiedot",
@@ -790,12 +810,14 @@
   "settings": "Asetukset",
   "share_address": "Jaa tilinumero",
   "show_console_log_button": "Näytä Konsoli Loki-painike",
+  "signature": "Allekirjoitus",
   "signature_hash": "Allekirjoituksen tarkiste",
   "signed_transaction_bytes": "Allekirjoitetun tapahtumat tavut",
   "smart_contract": "Älykäs sopimus",
   "smart_contract_creation": "Älykäs sopimusten luominen",
   "smart_contract_payment": "Älykkään sopimuksen maksaminen",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Tasainen käyrä",
   "standard_fee": "standardi",
   "start_date": "Aloituspäivä",
   "start_forging": "Aloita taonta",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Ryhmän nimi päivitettiin onnistuneesti.",
   "success_hash_verification": "Ladattu tiedosto on tarkastettu. Voit jatkaa asennusta.",
   "success_issue_asset": "Arvopaperi on luotu ja on saatavilla pian.",
+  "success_lease_balance": "Sinun saldosi vuokrataan 1440 korttelissa.",
   "success_message_sent": "Viesti on lähetetty.",
   "success_messages_decrypt": "Viesti(e)n salaus purettu.",
   "success_passphrase_confirmed": "Tunnuslause vahvistettu, olet nyt kirjautunut sisään.",
@@ -953,6 +976,7 @@
   "website_or_text": "Websivu tai teksti",
   "welcome_to_burst": "Tervetuloa BURST:iin!",
   "with_burst": "BURST:n kanssa",
+  "wrong_pin": "Väärä PIN-koodi",
   "x_confirmations": "__x__ vahvistusta",
   "yes": "Kyllä",
   "yesterdays_change": "Eilinen muutos",
