--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -49,6 +49,7 @@
   "all_blocks": "Tódolos bloques",
   "all_transactions": "Tódalas transaccións",
   "amount": "Cantidade",
+  "amount_nqt": "Cantidade",
   "amount_plus_fee": "Cantidade + Comisión",
   "and_logout": "e pechar Sesión",
   "animate_forging_indicator": "Animalo indicador da forxa",
@@ -96,9 +97,13 @@
   "block": "Bloque",
   "block_details": "Detalles do bloque",
   "block_generation_time": "Hora de xeración do bloque",
+  "block_height": "Altura do bloque",
+  "block_id": "ID de bloqueo",
+  "block_reward": "Bloquear recompensa",
   "block_signature": "Firma do bloque",
   "block_timestamp": "Marca de tempo do bloque",
   "blocks": "Bloques",
+  "blocks_details": "Detalles do bloque",
   "bookmark_asset": "Engadir activo a favoritos",
   "broadcast": "Transmitir",
   "broadcast_transaction": "Transacción Transmitida",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Descarregando a cadea de bloques",
   "downloading_update": "A actualización está a ser descargada. Informaralle unha vez que remate.",
   "drop_update": "Arrastre a actualización do cliente (o arquivo zip) aquí ou faga clic para seleccionar.",
+  "ec_block_height": "Altura de bloqueo EC",
+  "ec_block_id": "ID de bloqueo EC",
   "edit": "Editar",
   "effective_balance": "Saldo efectivo",
   "email_address": "Dirección de correo electrónico",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Errado",
   "fee": "Comisión",
+  "fee_nqt": "Taxa",
   "feedback": "Comentarios",
   "feedback_given": "Valoración enviada",
   "feedback_note": "Comentario",
@@ -470,6 +478,8 @@
   "generated_token_is": "O identificador xerado é:",
   "generation_signature": "Firma de xeración",
   "generator": "Xerador",
+  "generator_address": "Enderezo do xerador",
+  "generator_id": "ID do xerador",
   "generator_public_key": "Crave pública do xerador",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Deixar valoración",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Ningunha transacción neste bloque.",
   "no_transactions_yet": "Aínda non hai transaccións.",
   "non_verified_source": "Fonte descoñecida e potencialmente insegura",
+  "nonce": "Nonce",
   "none": "None",
   "not_delivered_in_time": "Non enviado en tempo",
   "not_forging": "Sen Forxar",
@@ -641,6 +652,7 @@
   "nr_votes": "# Votos",
   "number_of_trades": "Número de operacións",
   "number_of_transactions": "Número de Transaccións",
+  "number_transactions": "Número de transaccións",
   "numeric_account_id": "Numeric Account ID",
   "official_hash": "Hash oficial",
   "old_browser_warning": "Vostede está empregando un navegador antiguo que non é soportado por esta aplicación.",
@@ -672,6 +684,7 @@
   "payload_length": "Lonxitude da carga",
   "payment": "Pagamento",
   "payment_with_message": "Pago coa mensaxe",
+  "payments": "Pagamentos",
   "peer": "Par",
   "peers": "Pares",
   "pending": "Pendente",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Transaccións recentes desde",
   "recipient": "Destinatario",
   "recipient_account": "Conta do destinatario",
+  "recipient_address": "Enderezo do destinatario",
   "recipient_alias_suggestion": "Se desexa escribir un Alias, engada o carácter @ ó principio.",
+  "recipient_id": "ID do destinatario",
   "recipient_info": "A conta de destino ten chave pública e un saldo de __burst__ BURST.",
   "recipient_malformed": "A conta do destinatario conten erros, por favor revísea.",
   "recipient_malformed_suggestion": "A dirección do destino é incorrecta, quizais quixo dicir __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "A conta de destino é descoñecida, o que significa que nunca ten recibido ou emitido ninguna transacción. Por favor confirme a conta de destino antes de facelo envío.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. To submit this request you must supply the recipient public key also.",
+  "recipients": "Destinatarios",
   "record": "Grava",
   "referenced_transaction_full_hash": "Hash completo da transacción de referencia",
   "referenced_transaction_hash": "Transacción de Hash referenciada",
@@ -750,9 +766,11 @@
   "remove_from_group": "Quitar do grupo",
   "repeat": "Repetir",
   "request_burst": "Request BURST",
+  "request_processing_time": "Tempo de procesamento de solicitudes",
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Destinatario de recompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Número de Scoop",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de activos...",
   "search_by_id": "Búsqueda por ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Enviar unha mensaxe",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "remitente",
+  "sender_address": "Enderezo do remitente",
+  "sender_id": "ID do remitente",
   "sender_public_key": "Chave pública do remitente",
   "server_error_unknown": "Produciuse un erro descoñecido.",
   "set_account_info": "Establecela información da conta",
@@ -790,12 +810,14 @@
   "settings": "Configuración",
   "share_address": "Compartir dirección",
   "show_console_log_button": "Amosar botón de rexistro de consola",
+  "signature": "Sinatura",
   "signature_hash": "Hash da firma",
   "signed_transaction_bytes": "Bytes da transacción firmada",
   "smart_contract": "Contrato intelixente",
   "smart_contract_creation": "Creación de contratos intelixentes",
   "smart_contract_payment": "Pago de contrato intelixente",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Curva suave",
   "standard_fee": "Standard",
   "start_date": "Data de inicio",
   "start_forging": "Comenzar a forxar",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Nome do grupo actualizado con éxito.",
   "success_hash_verification": "A versión descarregada verificouse, o Hash é correcto. Pode continuar coa instalación.",
   "success_issue_asset": "O activo foi creado e estará dispoñible próximamente.",
+  "success_lease_balance": "O saldo será arrendado en 1440 bloques.",
   "success_message_sent": "A súa mensaxe foi enviada.",
   "success_messages_decrypt": "Mensaxe(s) descifrados con éxito.",
   "success_passphrase_confirmed": "Contrasinal confirmada con éxito, iniciou a súa sesión.",
@@ -953,6 +976,7 @@
   "website_or_text": "Sitio web ou texto",
   "welcome_to_burst": "Benvido a Burst!",
   "with_burst": "Con BURST",
+  "wrong_pin": "PIN incorrecto",
   "x_confirmations": "__x__ confirmacións",
   "yes": "Sí",
   "yesterdays_change": "Cambio de onte",
