--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -49,6 +49,7 @@
   "all_blocks": "सभी ब्लाक",
   "all_transactions": "All Transactions",
   "amount": "राशि",
+  "amount_nqt": "रकम",
   "amount_plus_fee": "राशि + फीस",
   "and_logout": "और लॉगआउट",
   "animate_forging_indicator": "सूचक फोर्जिंग ऐनिमेट करें",
@@ -96,9 +97,13 @@
   "block": "ब्लॉक",
   "block_details": "ब्लॉक विवरण",
   "block_generation_time": "ब्लॉक उत्पादन समय",
+  "block_height": "ब्लॉक ऊंचाई",
+  "block_id": "ब्लॉक आईडी",
+  "block_reward": "ब्लॉक रिवॉर्ड",
   "block_signature": "Block Signature",
   "block_timestamp": "Block Timestamp",
   "blocks": "ब्लॉक",
+  "blocks_details": "विवरण ब्लॉक करें",
   "bookmark_asset": "इस संपत्ति को बुकमार्क करो",
   "broadcast": "प्रसारण",
   "broadcast_transaction": "लेन-देन प्रसारण",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Blockchain डाउनलोड हो रही है",
   "downloading_update": "अपडेट डाउनलोड किया जा रहा है। समाप्त होने के बाद आपको सूचित किया जाएगा।",
   "drop_update": "जब क्लाइंट अपडेट (zip फाइल) डाउनलोड हो जाये तो उसे यहां छोड़ें यां चयन करने के लिए क्लिक करें।",
+  "ec_block_height": "ईसी ब्लॉक ऊंचाई",
+  "ec_block_id": "ईसी ब्लॉक आईडी",
   "edit": "संपादित करें",
   "effective_balance": "प्रभावी शेष",
   "email_address": "ईमेल पता",
@@ -441,6 +448,7 @@
   "export_contact": "संपर्क निर्यात करें",
   "failed": "में असफल रहा",
   "fee": "फीस",
+  "fee_nqt": "शुल्क",
   "feedback": "आपके सुझाव",
   "feedback_given": "प्रतिक्रिया दी",
   "feedback_note": "Feedback Note",
@@ -470,6 +478,8 @@
   "generated_token_is": "उत्पन्न टोकन है: ",
   "generation_signature": "Generation Signature",
   "generator": "जेनरेटर",
+  "generator_address": "जेनरेटर का पता",
+  "generator_id": "जेनरेटर आईडी",
   "generator_public_key": "Generator Public Key",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "प्रतिक्रिया दें",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "इस ब्लाक में कोई लेन-देन नहीं।",
   "no_transactions_yet": "अभी तक कोई लेनदेन नहीं।",
   "non_verified_source": "अज्ञात, संभावित असुरक्षित स्रोत",
+  "nonce": "अस्थायी रूप से",
   "none": "कोई नहीं",
   "not_delivered_in_time": "समय पर डिलीवर नहीं हुआ",
   "not_forging": "फोर्जिंग नहीं कर रहा",
@@ -641,6 +652,7 @@
   "nr_votes": "# वोटें",
   "number_of_trades": "Number of Trades",
   "number_of_transactions": "Number of Transactions",
+  "number_transactions": "लेन-देन की संख्या",
   "numeric_account_id": "अंकीय खाता ID",
   "official_hash": "आधिकारिक हैश",
   "old_browser_warning": "You are using an old Internet Explorer. Please update your IE or open localhost:8125 with your favorite Browser!",
@@ -672,6 +684,7 @@
   "payload_length": "Payload Length",
   "payment": "भुगतान",
   "payment_with_message": "Payment With Message",
+  "payments": "भुगतान",
   "peer": "Peer",
   "peers": "सहकर्मी",
   "pending": "लंबित",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "हाल ही में लेन-देन",
   "recipient": "प्राप्तकर्ता",
   "recipient_account": "प्राप्तकर्ता खाता",
+  "recipient_address": "प्राप्तकर्ता का पता",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
+  "recipient_id": "प्राप्तकर्ता आईडी",
   "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
   "recipient_malformed": "कृपया समायोजित करें, प्राप्तकर्ता खाते विकृत है।",
   "recipient_malformed_suggestion": "प्राप्तकर्ता का पता ग़लत बना हुआ है, क्या आपका मतलब है __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "recipients": "प्राप्तकर्ता",
   "record": "अभिलेख",
   "referenced_transaction_full_hash": "संदर्भित लेन-देन पूर्ण हैश",
   "referenced_transaction_hash": "संदर्भित लेनदेन हैश",
@@ -750,9 +766,11 @@
   "remove_from_group": "समूह से निकालें",
   "repeat": "दोहराएँ",
   "request_burst": "Request BURST",
+  "request_processing_time": "प्रसंस्करण समय का अनुरोध करें",
   "returning_user_q": "वापिस आये उपयोगकर्ता (यूजर)?",
   "reward_recipient": "इनाम देने वाला",
   "same_out": "Same Amount",
+  "scoop_num": "स्कूप नंबर",
   "search_aliases": "खोजें उपनाम...",
   "search_assets": "खोज परिसंपत्तियां...",
   "search_by_id": "ID के आधार पर खोजें...",
@@ -783,6 +801,8 @@
   "send_message_button": "संदेश भेजें",
   "send_message_to_sender": "भेजनेवाले को संदेश भेजें",
   "sender": "भेजनेवाला",
+  "sender_address": "भेजने वाले का पता",
+  "sender_id": "प्रेषक आईडी",
   "sender_public_key": "Sender Public Key",
   "server_error_unknown": "कोई अज्ञात त्रुटि उत्पन्न हुई।",
   "set_account_info": "खाता जानकारी भरें",
@@ -790,12 +810,14 @@
   "settings": "सेटिंग्स",
   "share_address": "Share Address",
   "show_console_log_button": "कंसोल लॉग बटन दिखाएँ",
+  "signature": "हस्ताक्षर",
   "signature_hash": "हस्ताक्षर हैश",
   "signed_transaction_bytes": "हस्ताक्षरित लेनदेन बाइट्स",
   "smart_contract": "स्मार्ट कॉन्ट्रैक्ट",
   "smart_contract_creation": "स्मार्ट कॉन्ट्रैक्ट क्रिएशन",
   "smart_contract_payment": "स्मार्ट अनुबंध का भुगतान",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "चिकनी वक्र",
   "standard_fee": "मानक",
   "start_date": "प्रारंभ दिनांक",
   "start_forging": "शुरू कर फोर्जिंग",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Group name updated successfully.",
   "success_hash_verification": "The downloaded version has been verified, the hash is correct. You may proceed with the installation.",
   "success_issue_asset": "The asset has been created and will be available soon.",
+  "success_lease_balance": "आपका शेष 1440 ब्लॉकों में पट्टे पर दिया जाएगा।",
   "success_message_sent": "आपका संदेश भेजा जा चूका है।",
   "success_messages_decrypt": "संदेश सफलतापूर्वक डिक्रिप्ट हो गए।",
   "success_passphrase_confirmed": "Passphrase confirmed successfully, you are now logged in.",
@@ -953,6 +976,7 @@
   "website_or_text": "Website or Text",
   "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
+  "wrong_pin": "गलत पिन",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
   "yesterdays_change": "कल का बदलाव",
