--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -49,6 +49,7 @@
   "all_blocks": "Tutti i blocchi",
   "all_transactions": "Tutte le traduzioni",
   "amount": "Ammontare",
+  "amount_nqt": "Quantità",
   "amount_plus_fee": "Importo + commissione",
   "and_logout": "ed uscire",
   "animate_forging_indicator": "Animare l'indicatore di forgiatura",
@@ -96,9 +97,13 @@
   "block": "Blocco",
   "block_details": "Dettagli blocco",
   "block_generation_time": "Tempo generazione blocco",
+  "block_height": "Block Height",
+  "block_id": "ID blocco",
+  "block_reward": "Ricompensa del blocco",
   "block_signature": "Firma del blocco",
   "block_timestamp": "Timestamp Blocco",
   "blocks": "Blocchi",
+  "blocks_details": "Dettagli del blocco",
   "bookmark_asset": "Aggiungi questo Asset ai preferiti",
   "broadcast": "Trasmissione",
   "broadcast_transaction": "Trasmetti la transazione",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Download Blockchain",
   "downloading_update": "L'aggiornamento è in fase di download. Sarai informato una volta finito.",
   "drop_update": "Quando scaricato, trascina qui l'aggiornamento del client (file zip) o clicca per selezionare.",
+  "ec_block_height": "Altezza del blocco CE",
+  "ec_block_id": "ID blocco CE",
   "edit": "Modifica",
   "effective_balance": "Saldo effettivo",
   "email_address": "Indirizzo email",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Fallito",
   "fee": "Commissione",
+  "fee_nqt": "tassa",
   "feedback": "Feedback",
   "feedback_given": "Feedback inviato",
   "feedback_note": "Feedback",
@@ -470,6 +478,8 @@
   "generated_token_is": "Il token generato è:",
   "generation_signature": "Firma di generazione",
   "generator": "Generatore",
+  "generator_address": "Indirizzo del generatore",
+  "generator_id": "ID generatore",
   "generator_public_key": "Generatore della Chiave Pubblica",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Lascia un Feedback",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Nessuna transazione in questo blocco.",
   "no_transactions_yet": "Ancora nessuna transazione.",
   "non_verified_source": "Fonte sconosciuta, potenzialmente insicura",
+  "nonce": "nonce",
   "none": "None",
   "not_delivered_in_time": "Non consegnato in tempo",
   "not_forging": "Forgiatura arrestata",
@@ -641,6 +652,7 @@
   "nr_votes": "# Voti",
   "number_of_trades": "Numero di operazioni",
   "number_of_transactions": "Numero di transazioni",
+  "number_transactions": "Numero di transazioni",
   "numeric_account_id": "Numeric Account ID",
   "official_hash": "Hash ufficiale",
   "old_browser_warning": "Stai utilizzando un vecchio browser che questa applicazione non supporta.",
@@ -672,6 +684,7 @@
   "payload_length": "Lunghezza del carico",
   "payment": "Pagamento",
   "payment_with_message": "Pagamento con messaggio",
+  "payments": "pagamenti",
   "peer": "Peer",
   "peers": "Peer",
   "pending": "In sospeso",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Transazioni recenti da",
   "recipient": "Destinatario",
   "recipient_account": "Account del destinatario",
+  "recipient_address": "Indirizzo del destinatario",
   "recipient_alias_suggestion": "Se desideri digitare un alias, anteponi il carattere @.",
+  "recipient_id": "ID destinatario",
   "recipient_info": "L'account del destinatario ha una chiave pubblica ed un saldo di __burst__ BURST.",
   "recipient_malformed": "L'account del destinatario non è corretto, si prega di controllare.",
   "recipient_malformed_suggestion": "L'indirizzo del destinatario non è corretto, forse intendevi __recipient__?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "L'account del destinatario è un account sconosciuto, significa che non ha mai avuto una transazione in entrata o in uscita. Si prega di ricontrollare l'indirizzo del destinatario prima dell'invio.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. To submit this request you must supply the recipient public key also.",
+  "recipients": "destinatari",
   "record": "Disco",
   "referenced_transaction_full_hash": "Hash completo della transazione di riferimento",
   "referenced_transaction_hash": "Hash della transazione indicata",
@@ -750,9 +766,11 @@
   "remove_from_group": "Rimuovi dal gruppo",
   "repeat": "Ripeti",
   "request_burst": "Request BURST",
+  "request_processing_time": "Richiedi tempo di elaborazione",
   "returning_user_q": "Utente già registrato?",
   "reward_recipient": "Ricompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Numero del mestolo",
   "search_aliases": "Ricerca alias...",
   "search_assets": "Ricerca Asset...",
   "search_by_id": "Ricerca per ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Invia messaggio",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "Mittente",
+  "sender_address": "Indirizzo mittente",
+  "sender_id": "identità del mittente",
   "sender_public_key": "Chiave pubblica del mittente",
   "server_error_unknown": "Ci scusi. C'è stato un errore.",
   "set_account_info": "Impostare Info Account",
@@ -790,12 +810,14 @@
   "settings": "Impostazioni",
   "share_address": "Condividi indirizzo",
   "show_console_log_button": "Visualizza il pulsante Log Console",
+  "signature": "Firma",
   "signature_hash": "Hash della firma",
   "signed_transaction_bytes": "Bytes di transazione firmata",
   "smart_contract": "Contratto intelligente",
   "smart_contract_creation": "Creazione intelligente di contratti",
   "smart_contract_payment": "Pagamento di Smart Contract",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Curva morbida",
   "standard_fee": "Standard",
   "start_date": "Data inizio",
   "start_forging": "Inizia a forgiare",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Nome gruppo aggiornato con successo.",
   "success_hash_verification": "La versione scaricata è stata verificata, l'hash è corretto. Si può procedere con l'installazione.",
   "success_issue_asset": "L'asset è stato creato e sarà disponibile a breve.",
+  "success_lease_balance": "Il tuo saldo verrà affittato in 1440 blocchi.",
   "success_message_sent": "Il tuo messaggio è stato inviato.",
   "success_messages_decrypt": "Messaggio(i) decriptati con successo.",
   "success_passphrase_confirmed": "Passphrase confermata con successo, ora sei connesso.",
@@ -953,6 +976,7 @@
   "website_or_text": "Sito Web o testo",
   "welcome_to_burst": "Benvenuti a Burst!",
   "with_burst": "Con BURST",
+  "wrong_pin": "PIN errato",
   "x_confirmations": "__x__ conferme",
   "yes": "Sì",
   "yesterdays_change": "Il cambiamento di ieri",
