--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -49,6 +49,7 @@
   "all_blocks": "全てのブロック",
   "all_transactions": "全てのトランザクション",
   "amount": "量",
+  "amount_nqt": "量",
   "amount_plus_fee": "金額 + 手数料",
   "and_logout": "そしてログアウト",
   "animate_forging_indicator": "鋳造のインジケーターをアニメーション化",
@@ -96,9 +97,13 @@
   "block": "ブロック",
   "block_details": "ブロックの詳細",
   "block_generation_time": "ブロックの生成時間",
+  "block_height": "ブロックの高さ",
+  "block_id": "ブロックID",
+  "block_reward": "ブロック報酬",
   "block_signature": "ブロックの署名",
   "block_timestamp": "ブロックのタイムスタンプ",
   "blocks": "ブロック",
+  "blocks_details": "ブロック詳細",
   "bookmark_asset": "この資産をブックマーク",
   "broadcast": "ブロードキャスト",
   "broadcast_transaction": "トランザクションをブロードキャスト",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "ブロックチェーンをダウンロード中",
   "downloading_update": "更新プログラムをダウンロード中です。それが終わったらあなたは知らされるでしょう。",
   "drop_update": "クライアントのアップデート（zipファイル）をダウンロードしたら、ここにドロップするか、クリックして選択してください。",
+  "ec_block_height": "ECブロックの高さ",
+  "ec_block_id": "ECブロックID",
   "edit": "編集",
   "effective_balance": "有効残高",
   "email_address": "メールアドレス",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "失敗",
   "fee": "料金",
+  "fee_nqt": "費用",
   "feedback": "フィードバック",
   "feedback_given": "与えられたフィードバック",
   "feedback_note": "フィードバックのメモ ",
@@ -470,6 +478,8 @@
   "generated_token_is": "生成されたトークンは：",
   "generation_signature": "署名発行",
   "generator": "ジェネレーター",
+  "generator_address": "発電機アドレス",
+  "generator_id": "発電機ID",
   "generator_public_key": "公開キーのジェネレーター",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "フィードバックを与える",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "このブロックにはトランザクションがありません。",
   "no_transactions_yet": "トランザクションがまだありません。",
   "non_verified_source": "未知の、潜在的に安全でない情報源",
+  "nonce": "一回だけ",
   "none": "なし",
   "not_delivered_in_time": "時間内に配信されず",
   "not_forging": "鋳造していません",
@@ -641,6 +652,7 @@
   "nr_votes": "投票数",
   "number_of_trades": "取引数",
   "number_of_transactions": "トランザクションの数",
+  "number_transactions": "トランザクション数",
   "numeric_account_id": "数値によるアカウントID",
   "official_hash": "公式ハッシュ",
   "old_browser_warning": "このアプリケーションをサポートしていない古いブラウザーを使用しています。",
@@ -672,6 +684,7 @@
   "payload_length": "ペイロードの長さ",
   "payment": "支払い",
   "payment_with_message": "メッセージをつけて購入",
+  "payments": "支払い",
   "peer": "ピア",
   "peers": "ピア",
   "pending": "保留中",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "最近の取引以降",
   "recipient": "受信者",
   "recipient_account": "受信者のアカウント",
+  "recipient_address": "受取人アドレス",
   "recipient_alias_suggestion": "エイリアスを入力する場合は、先頭に@ 文字を付けてください。",
+  "recipient_id": "受信者ID",
   "recipient_info": "受信者のアカウントには公開キーがあり、残高は__burst__ BURSTです。",
   "recipient_malformed": "受信者のアカウントが間違っていますので、訂正してください。",
   "recipient_malformed_suggestion": "受信者のアドレスが正しくありません。__recipient__のことですか。",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "このアカウントの公開キーは既に発表されています。そのアカウントIDを代わりにお使いください。",
   "recipient_unknown": "受信者のアカウントは不明なアカウントです。ということは、これまでトランザクションを受信・発信したことがないということを意味します。送信する前に受信者のアドレスを再度チェックしてください。",
   "recipient_unknown_pka": "受信者のアカウントは不明なアカウントです。ということは、これまでトランザクションを発信・送信したことがないということを意味します。このリクエストを提出するには、受信者の公開キーも供給しなければなりません。",
+  "recipients": "受信者",
   "record": "記録",
   "referenced_transaction_full_hash": "参照先トランザクションの完全ハッシュ",
   "referenced_transaction_hash": "参照先のトランザクションハッシュ",
@@ -750,9 +766,11 @@
   "remove_from_group": "グループから削除",
   "repeat": "リピート",
   "request_burst": "Request BURST",
+  "request_processing_time": "リクエスト処理時間",
   "returning_user_q": "以前ご利用になられたユーザーですか",
   "reward_recipient": "報酬受取人",
   "same_out": "Same Amount",
+  "scoop_num": "スクープ番号",
   "search_aliases": "エイリアスを検索",
   "search_assets": "資産を検索",
   "search_by_id": "IDで検索",
@@ -783,6 +801,8 @@
   "send_message_button": "メッセージを送信",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "送信元",
+  "sender_address": "送信者アドレス",
+  "sender_id": "送信者ID",
   "sender_public_key": "送信者の公開キー",
   "server_error_unknown": "不明なエラーが発生しました。",
   "set_account_info": "アカウント情報を設定",
@@ -790,12 +810,14 @@
   "settings": "設定",
   "share_address": "アドレスを共有",
   "show_console_log_button": "コンソールのログボタンを表示",
+  "signature": "署名",
   "signature_hash": "署名のハッシュ",
   "signed_transaction_bytes": "署名されたトランザクションのバイト",
   "smart_contract": "スマート契約",
   "smart_contract_creation": "スマート契約の作成",
   "smart_contract_payment": "スマート契約の支払い",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "滑らかな曲線",
   "standard_fee": "標準",
   "start_date": "開始日",
   "start_forging": "鋳造を開始します。",
@@ -855,6 +877,7 @@
   "success_group_name_update": "グループ名が更新されました。",
   "success_hash_verification": "ハッシュが正しかったので、ダウンロードしたバージョンが正しいことが確認されました。インストールを続行できます。",
   "success_issue_asset": "資産は作成されました。まもなく利用できます。",
+  "success_lease_balance": "あなたの残高は1440ブロックでリースアウトされます。",
   "success_message_sent": "あなたのメッセージが送信されました。",
   "success_messages_decrypt": "メッセージが復号化されました。",
   "success_passphrase_confirmed": "パスフレーズが正常に確認されました。現在ログインしています。",
@@ -953,6 +976,7 @@
   "website_or_text": "ウェブサイトまたはテキスト",
   "welcome_to_burst": "Burst へようこそ!",
   "with_burst": "BURSTと",
+  "wrong_pin": "間違ったPIN",
   "x_confirmations": "__x__ 確認",
   "yes": "はい",
   "yesterdays_change": "昨日の変更",
