--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -49,6 +49,7 @@
   "all_blocks": "Visi blokai",
   "all_transactions": "Visos transakcijos",
   "amount": "Kiekis",
+  "amount_nqt": "Suma",
   "amount_plus_fee": "Suma + mokestis",
   "and_logout": "ir atsijungti",
   "animate_forging_indicator": "Animuoti \"kalimo\" indikatorių",
@@ -96,9 +97,13 @@
   "block": "Blokas",
   "block_details": "Bloko detali informacija",
   "block_generation_time": "Bloko generavimo laikas",
+  "block_height": "Blokuoti aukštį",
+  "block_id": "Blokuoti ID",
+  "block_reward": "Blokuoti atlygį",
   "block_signature": "Bloko parašas",
   "block_timestamp": "Bloko laiko žyma",
   "blocks": "Blokai",
+  "blocks_details": "Blokuoti duomenis",
   "bookmark_asset": "Įdėti aktyvą į mėgstamų žymę",
   "broadcast": "Transliuoti",
   "broadcast_transaction": "Transliuoti transakciją",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Atsisiunčiami blokai",
   "downloading_update": "Atnaujinimas atnaujinamas. Jums bus pranešta, kai jis bus baigtas.",
   "drop_update": "Užveskite kliento atnaujinimo failą (zip failas) čia, kai atsisiųsite arba spustelėkite, kad pažymėtumėte.",
+  "ec_block_height": "EB bloko aukštis",
+  "ec_block_id": "EB bloko ID",
   "edit": "Redaguoti",
   "effective_balance": "Efektyvus balansas",
   "email_address": "Elektroninio pašto adresas",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Nepavyko",
   "fee": "Mokestis",
+  "fee_nqt": "Rinkliava",
   "feedback": "Atsiliepimas",
   "feedback_given": "Atsiliepimas pateiktas",
   "feedback_note": "Atsiliepimo pastaba",
@@ -470,6 +478,8 @@
   "generated_token_is": "Sukurtas atpažinimo ženklas yra:",
   "generation_signature": "Generation Signature",
   "generator": "Generatorius",
+  "generator_address": "Generatoriaus adresas",
+  "generator_id": "Generatoriaus ID",
   "generator_public_key": "Viešojo rakto generatorius",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Pateikti atsiliepimus",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Nėra transakcijų šiame bloke.",
   "no_transactions_yet": "Nėra jokių transakcijų dar.",
   "non_verified_source": "Nežinomas, galbūt nesaugus šaltinis",
+  "nonce": "Nonce",
   "none": "Nėra",
   "not_delivered_in_time": "Nepristatyta laiku",
   "not_forging": "Kalimas\" nevyksta",
@@ -641,6 +652,7 @@
   "nr_votes": "# Balsai",
   "number_of_trades": "Sandorių skaičiaus",
   "number_of_transactions": "Transakcijų skaičius",
+  "number_transactions": "Sandorių skaičius",
   "numeric_account_id": "Skaitinis sąskaitos ID",
   "official_hash": "Oficialus \"hash",
   "old_browser_warning": "Jūs naudojate seną naršyklę, kuri nepalaiko šios taikomosios programos.",
@@ -672,6 +684,7 @@
   "payload_length": "Payload Lenght",
   "payment": "Mokėjimas",
   "payment_with_message": "Mokėjimas su žinute",
+  "payments": "Mokėjimai",
   "peer": "Peer'as",
   "peers": "Peer'ai",
   "pending": "Laukiama",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Naujausi sandoriai nuo",
   "recipient": "Gavėjas",
   "recipient_account": "Gavėjo sąskaita",
+  "recipient_address": "Gavėjo adresas",
   "recipient_alias_suggestion": "Jei norite įvesti pseudinimą, pridėkite jį prie @ simbolio.",
+  "recipient_id": "Gavėjo ID",
   "recipient_info": "Gavėjo sąskaita turi viešąjį raktą ir __burst__ BURST joje.",
   "recipient_malformed": "Gavėjo sąskaita yra neteisinga, pasitikrinkite.",
   "recipient_malformed_suggestion": "Gavėjo adresas yra neteisingas, turite galvoje",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Šios sąskaitos viešasis raktas jau paskelbtas. Naudokite sąskaitos ID.",
   "recipient_unknown": "Gavėjo sąskaita yra nežinomą sąskaita, tai reiškia, niekada neturėjo jokios transakcijos. Prašome patikrinkite savo gavėjo adresą prieš pateikdami.",
   "recipient_unknown_pka": "Gavėjo sąskaita yra nežinoma, tai reiškia, ji niekada neturėjo įeinančios ar išeinančios transakcijos. Norint pateikti šį prašymą, turite taip pat pateikti gavėjo viešąjį raktą.",
+  "recipients": "Gavėjai",
   "record": "Įrašai",
   "referenced_transaction_full_hash": "Nurodytos transakcijos pilnas \"hash",
   "referenced_transaction_hash": "Nurodytos transakcijos \"hash",
@@ -750,9 +766,11 @@
   "remove_from_group": "Šalinti iš grupės",
   "repeat": "Kartoti",
   "request_burst": "Request BURST",
+  "request_processing_time": "Prašyti apdorojimo laiko",
   "returning_user_q": "Esamas vartotojas?",
   "reward_recipient": "Atlygis Gavėjas",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop skaičius",
   "search_aliases": "Ieškoti pseudonimų...",
   "search_assets": "Ieškoti aktyvų...",
   "search_by_id": "Paieška pagal ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Siųsti žinutę",
   "send_message_to_sender": "Siųsti žinutę siuntėjui",
   "sender": "Siuntėjas",
+  "sender_address": "Siuntėjo adresas",
+  "sender_id": "siuntėjo ID",
   "sender_public_key": "Siuntėjo viešasis raktas",
   "server_error_unknown": "Įvyko nežinoma klaida.",
   "set_account_info": "Nustatyti sąskaitos informaciją",
@@ -790,12 +810,14 @@
   "settings": "Nustatymai",
   "share_address": "Pasidalinti adresą",
   "show_console_log_button": "Rodyti konsolės pranešimų mygtuką",
+  "signature": "Parašas",
   "signature_hash": "Parašo \"hash",
   "signed_transaction_bytes": "Pasirašytos transakcijos baitai",
   "smart_contract": "Protinga sutartis",
   "smart_contract_creation": "„Smart“ sutarties sudarymas",
   "smart_contract_payment": "Išmaniosios sutarties mokėjimas",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Sklandi kreivė",
   "standard_fee": "Standartinis",
   "start_date": "Pradžios Data",
   "start_forging": "Pradėti \"kalti",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Grupės pavadinimas sėkmingai atnaujintas.",
   "success_hash_verification": "Patikrinus atsisiųstą versiją, \"hash\" yra teisinga. Gali diegti toliau.",
   "success_issue_asset": "Aktyvas buvo sukurtas ir jį bus galima rasti netrukus.",
+  "success_lease_balance": "Jūsų balansas bus išnuomotas 1440 blokų.",
   "success_message_sent": "Jūsų žinutė išsiųsta.",
   "success_messages_decrypt": "Žinutė(s) iššifruoti sėkmingai.",
   "success_passphrase_confirmed": "Slaptažodis patvirtintas sėkmingai, jūs dabar prisijungęs.",
@@ -953,6 +976,7 @@
   "website_or_text": "Svetainė arba tekstas",
   "welcome_to_burst": "Sveiki atvykę į Burst!",
   "with_burst": "Su BURST",
+  "wrong_pin": "Klaidingas PIN kodas",
   "x_confirmations": "__x__ patvirtinimai",
   "yes": "Taip",
   "yesterdays_change": "Vakarinis pokytis",
