--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -49,6 +49,7 @@
   "all_blocks": "Alle Blokken",
   "all_transactions": "Alle Transacties",
   "amount": "Bedrag",
+  "amount_nqt": "Bedrag",
   "amount_plus_fee": "Bedrag + kosten",
   "and_logout": "en Uitloggen",
   "animate_forging_indicator": "Animatie smeden Indicator",
@@ -96,9 +97,13 @@
   "block": "Blok",
   "block_details": "Blok Details",
   "block_generation_time": "Generatietijd blokken",
+  "block_height": "Blokhoogte",
+  "block_id": "ID blokkeren",
+  "block_reward": "Block Reward",
   "block_signature": "Blok handtekening",
   "block_timestamp": "Blok Timestamp",
   "blocks": "Blokken",
+  "blocks_details": "Details blokkeren",
   "bookmark_asset": "Bookmark deze Asset",
   "broadcast": "Uitzenden",
   "broadcast_transaction": "Transactie uitzenden",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Blockchain aan het downloaden",
   "downloading_update": "De update wordt gedownload. Je wordt op de hoogte gesteld zodra het is afgelopen.",
   "drop_update": "Plaats de client update (zip-bestand) hier wanneer het gedownload is of klik om te selecteren.",
+  "ec_block_height": "EC-blokhoogte",
+  "ec_block_id": "EC-blok-ID",
   "edit": "Bewerken",
   "effective_balance": "Effectieve saldo",
   "email_address": "E-mailadres",
@@ -441,6 +448,7 @@
   "export_contact": "Exporteer Contacten",
   "failed": "Mislukt",
   "fee": "Vergoeding",
+  "fee_nqt": "honorarium",
   "feedback": "Feedback",
   "feedback_given": "Feedback gegeven",
   "feedback_note": "Opmerking",
@@ -470,6 +478,8 @@
   "generated_token_is": "Het gegenereerde token is:",
   "generation_signature": "Genereer Handtekening",
   "generator": "Generator",
+  "generator_address": "Generator adres",
+  "generator_id": "Generator ID",
   "generator_public_key": "Openbare sleutel van de generator",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Geef Feedback",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Er zijn geen transacties in dit blok.",
   "no_transactions_yet": "Nog geen transacties.",
   "non_verified_source": "Onbekende, potentieel onveilige bron",
+  "nonce": "nonce",
   "none": "Geen",
   "not_delivered_in_time": "Niet op tijd geleverd",
   "not_forging": "Niet aan het smeden",
@@ -641,6 +652,7 @@
   "nr_votes": "# Stemmen",
   "number_of_trades": "Aantal transacties",
   "number_of_transactions": "Aantal transacties",
+  "number_transactions": "Aantal transacties",
   "numeric_account_id": "Numerieke Account-ID",
   "official_hash": "Officiele Hash",
   "old_browser_warning": "U gebruikt een oude browser die deze applicatie niet ondersteunt.",
@@ -672,6 +684,7 @@
   "payload_length": "Lengte van de lading",
   "payment": "Betaling",
   "payment_with_message": "Betaling met bericht",
+  "payments": "betalingen",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "In behandeling",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Recente transacties sinds",
   "recipient": "Ontvanger",
   "recipient_account": "Ontvangend Rekening",
+  "recipient_address": "Geadresseerde adres",
   "recipient_alias_suggestion": "Als je een Alias wilt intypen begin dan door eerst een \"@\" teken in te voeren.",
+  "recipient_id": "Ontvanger ID",
   "recipient_info": "De ontvangende account heeft een openbare sleutel en een balans van __burst__ BURST.",
   "recipient_malformed": "Het adres van de ontvangende account is ongeldig, pas het a.u.b. aan.",
   "recipient_malformed_suggestion": "Het adres van de ontvanger is niet geldig, bedoelt u __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "De public key van dit account is al bekend. Gebruik in plaats daarvan de account-ID.",
   "recipient_unknown": "De ontvangende rekening is onbekend, wat betekent dat het nooit een inkomende of uitgaande transactie heeft gehad. Controleer het ontvangst adres.",
   "recipient_unknown_pka": "Het ontvangende account is een onbekend account, wat betekent dat het nooit een inkomende of uitgaande transactie heeft gehad. Om deze actie te doen slagen, moet ook de openbare sleutel van de ontvanger worden opgeven.",
+  "recipients": "ontvangers",
   "record": "Record",
   "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
   "referenced_transaction_hash": "Verwijzende Transactie Hash",
@@ -750,9 +766,11 @@
   "remove_from_group": "Verwijderen uit groep",
   "repeat": "Herhaal",
   "request_burst": "Request BURST",
+  "request_processing_time": "Verzoek om verwerkingstijd",
   "returning_user_q": "Terugkerende Gebruiker?",
   "reward_recipient": "Beloning Ontvanger",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop nummer",
   "search_aliases": "Zoek Aliassen...",
   "search_assets": "Zoek Asset...",
   "search_by_id": "Zoeken op ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Verstuur een bericht",
   "send_message_to_sender": "Stuur bericht naar de afzender",
   "sender": "Zender",
+  "sender_address": "Zender adres",
+  "sender_id": "zender ID",
   "sender_public_key": "Openbare sleutel van de afzender",
   "server_error_unknown": "Er is een onbekende fout opgetreden.",
   "set_account_info": "Accountgegevens instellen",
@@ -790,12 +810,14 @@
   "settings": "Instellingen",
   "share_address": "Deel Adres",
   "show_console_log_button": "Console Log knop weergeven",
+  "signature": "Handtekening",
   "signature_hash": "Handtekening Hash",
   "signed_transaction_bytes": "Ondertekende transactie Bytes",
   "smart_contract": "Slim contract",
   "smart_contract_creation": "Slimme contractvorming",
   "smart_contract_payment": "Betaling van Smart Contract",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Gladde ronding",
   "standard_fee": "Standaard",
   "start_date": "Begindatum",
   "start_forging": "Start Forging",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Groepsnaam is bijgewerkt.",
   "success_hash_verification": "De gedownloade versie is geverifieerd, de hash is correct. U kunt doorgaan met het installatieproces.",
   "success_issue_asset": "De asset is gemaakt en zal binnenkort beschikbaar zijn.",
+  "success_lease_balance": "Uw saldo wordt verhuurd in 1440 blokken.",
   "success_message_sent": "Uw bericht is verstuurd.",
   "success_messages_decrypt": "Bericht(en) met succes gedecodeerd.",
   "success_passphrase_confirmed": "Wachtwoord/Passphrase met succes bevestigd, U bent nu ingelogd.",
@@ -953,6 +976,7 @@
   "website_or_text": "Website of Tekst",
   "welcome_to_burst": "Welkom bij Burst!",
   "with_burst": "Met BURST",
+  "wrong_pin": "Verkeerde pincode",
   "x_confirmations": "__x__ bevestigingen",
   "yes": "Ja",
   "yesterdays_change": "Yesterday's Change",
