--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -49,6 +49,7 @@
   "all_blocks": "Wszystkie bloki",
   "all_transactions": "Wszystkie transakcje",
   "amount": "Kwota",
+  "amount_nqt": "Ilość",
   "amount_plus_fee": "Kwota + koszt",
   "and_logout": "i wyloguj",
   "animate_forging_indicator": "Animuj indykator forgingu",
@@ -96,9 +97,13 @@
   "block": "Blok",
   "block_details": "Szczegóły bloku",
   "block_generation_time": "Czas wynegerowania bloku",
+  "block_height": "Wysokość bloku",
+  "block_id": "ID bloku",
+  "block_reward": "Zablokuj nagrodę",
   "block_signature": "Sygnatura bloku",
   "block_timestamp": "Timestamp bloku",
   "blocks": "Bloki",
+  "blocks_details": "Szczegóły bloku",
   "bookmark_asset": "Dodaj aktywo do zakładek",
   "broadcast": "Broadcast",
   "broadcast_transaction": "Broadcast transakcji",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Pobieram blockchain",
   "downloading_update": "Aktualizacja jest pobierana. Zostaniesz poinformowany po zakończeniu.",
   "drop_update": "Dodaj plik zip programu tutaj lub wybierz klikając.",
+  "ec_block_height": "Wysokość bloku EC",
+  "ec_block_id": "Identyfikator bloku EC",
   "edit": "Edytuj",
   "effective_balance": "Efektywny balans",
   "email_address": "Adres email",
@@ -441,6 +448,7 @@
   "export_contact": "Eksport kontaktów",
   "failed": "Nie udało się",
   "fee": "Koszt",
+  "fee_nqt": "Opłata",
   "feedback": "Informacja zwrotna",
   "feedback_given": "Informacje zwrotne",
   "feedback_note": "Notatka o informacji zwrotnej",
@@ -470,6 +478,8 @@
   "generated_token_is": "Wygenerowany token:",
   "generation_signature": "Generowanie sygnatury",
   "generator": "Generator",
+  "generator_address": "Adres generatora",
+  "generator_id": "Identyfikator generatora",
   "generator_public_key": "Generator klucza publicznego",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Zostaw wiadomość zwrotną",
@@ -628,6 +638,7 @@
   "no_transactions_in_block": "Blok nie zawiera transakcji.",
   "no_transactions_yet": "Nie ma jeszcze transakcji.",
   "non_verified_source": "Nieznane, potencjalnie niebezpieczne źródło",
+  "nonce": "Chwilowo",
   "none": "Żaden",
   "not_delivered_in_time": "Nie dostarczone na czas",
   "not_forging": "Nie jest Forging",
@@ -650,6 +661,7 @@
   "nr_votes": "# Głosów",
   "number_of_trades": "Ilość wykonanych zleceń",
   "number_of_transactions": "Ilość transakcji",
+  "number_transactions": "Liczba transakcji",
   "numeric_account_id": "ID numeryczne konta",
   "official_hash": "Oficjalny hash",
   "old_browser_warning": "Używasz starej wersji IE. Aktualizuj IE lub idź do localhost:8125 używając innej przeglądarki!",
@@ -681,6 +693,7 @@
   "payload_length": "Długość ładunku",
   "payment": "Zapłata",
   "payment_with_message": "Płatność z wiadomością",
+  "payments": "Płatności",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "Oczekuje",
@@ -726,7 +739,9 @@
   "recent_transactions_since": "Ostatnie transakcje od",
   "recipient": "Odbiorca",
   "recipient_account": "Konto odbiorcy",
+  "recipient_address": "Adres odbiorcy",
   "recipient_alias_suggestion": "Alias musi być poprzedzony znakiem @.",
+  "recipient_id": "ID odbiorcy",
   "recipient_info": "Konto odbiorcy posiada klucz publiczny i balans równy __burst__ BURST.",
   "recipient_malformed": "Konto odbiorcy nie jest poprawne.",
   "recipient_malformed_suggestion": "Adres odbiorcy nie jest poprawny, czy miałeś na myśli __recipient__ ?",
@@ -738,6 +753,7 @@
   "recipient_public_key_already_announced": "Klucz publiczny tego konta już został ogłoszony. Użyj ID konta.",
   "recipient_unknown": "Konto odbiorcy jest nieznane czyli nie przeprowadzono z niego transakcji wychodzącej ani przychodzącej. Upewnij się że adres odbiorcy jest poprawny przed wysłaniem.",
   "recipient_unknown_pka": "Konto odbiorcy jest nieznane czyli nie przeprowadzono z niego transakcji wychodzącej ani przychodzącej.",
+  "recipients": "Odbiorcy",
   "record": "Rekord",
   "referenced_transaction_full_hash": "Pełny Hash transakcji",
   "referenced_transaction_hash": "Hash transakcji",
@@ -759,9 +775,11 @@
   "remove_from_group": "Usuń z grupy",
   "repeat": "Powtórz",
   "request_burst": "Request BURST",
+  "request_processing_time": "Żądaj czasu przetwarzania",
   "returning_user_q": "Powracający użytkownik?",
   "reward_recipient": "Odbiorca nagrody",
   "same_out": "Ta sama ilość",
+  "scoop_num": "Numer miarki",
   "search_aliases": "Szukaj Aliasu...",
   "search_assets": "Szukaj Aktywa...",
   "search_by_id": "Szukaj wg ID...",
@@ -792,6 +810,8 @@
   "send_message_button": "Wyślij wiadomość",
   "send_message_to_sender": "Wyślij wiadomość do nadawcy",
   "sender": "Nadawca",
+  "sender_address": "Adres nadawcy",
+  "sender_id": "ID nadawcy",
   "sender_public_key": "Klucz publiczny nadawcy",
   "server_error_unknown": "Wystąpił nieznany błąd.",
   "set_account_info": "Ustaw informacje o koncie",
@@ -799,12 +819,14 @@
   "settings": "Ustawienia",
   "share_address": "Udostępnij adres",
   "show_console_log_button": "Pokaż przycisk do wyświetlenia konsoli",
+  "signature": "Podpis",
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Bajty podpisanej transakci",
   "smart_contract": "Inteligentna umowa",
   "smart_contract_creation": "Inteligentne tworzenie kontraktu",
   "smart_contract_payment": "Płatność inteligentnej umowy",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Gładka krzywa",
   "standard_fee": "Standard",
   "start_date": "Data rozpoczęcia",
   "start_forging": "Rozpocznij Forging",
@@ -864,7 +886,7 @@
   "success_group_name_update": "Nazwa grupy została zmieniona.",
   "success_hash_verification": "Pobrana wersja została pomyślnie zweryfikowana. Hash jest prawidłowy. Możesz kontynuować instalację.",
   "success_issue_asset": "Aktywo zostało utworzone i będzie wkrótce dostępne.",
-  "success_lease_balance": "Twój balans będzie wyleasingowany za 1440 bloków.",
+  "success_lease_balance": "Twoje saldo zostanie wydzierżawione w 1440 blokach.",
   "success_message_sent": "Wiadomość została wysłana.",
   "success_messages_decrypt": "Wiadomość(i) zostały pomyślnie odszyfrowane.",
   "success_passphrase_confirmed": "Hasło poprawne! Jesteś zalogowany.",
@@ -963,6 +985,7 @@
   "website_or_text": "Strona lub tekst",
   "welcome_to_burst": "Witaj na Burst!",
   "with_burst": "Z BURST",
+  "wrong_pin": "Zły kod PIN",
   "x_confirmations": "__x__ potwierdzeń",
   "yes": "Tak",
   "yesterdays_change": "Wczorajsza zmiana",
