--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -49,6 +49,7 @@
   "all_blocks": "Todos os Blocos",
   "all_transactions": "Todas as transações",
   "amount": "Quantidade",
+  "amount_nqt": "Montante",
   "amount_plus_fee": "Quantidade + Taxa",
   "and_logout": "e encerrar a sessão",
   "animate_forging_indicator": "Animar Indicador de Forjamento",
@@ -96,9 +97,13 @@
   "block": "Bloco",
   "block_details": "Detalhes de Bloco",
   "block_generation_time": "Tempo de Geração do Bloco",
+  "block_height": "Altura do bloco",
+  "block_id": "ID do bloco",
+  "block_reward": "Bloquear Recompensa",
   "block_signature": "Assinatura do bloco",
   "block_timestamp": "Data do Bloco",
   "blocks": "Blocos",
+  "blocks_details": "Detalhes do Bloco",
   "bookmark_asset": "Adicionar Este Ativo aos Favoritos",
   "broadcast": "Transmitir",
   "broadcast_transaction": "Transmitir a Transação",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Baixando a Corrente de Blocos",
   "downloading_update": "A atualização está sendo baixada. Você será informado assim que terminar.",
   "drop_update": "Arraste a atualização do cliente (o arquivo zip) aqui ou clique para selecionar.",
+  "ec_block_height": "Altura do Bloco EC",
+  "ec_block_id": "ID do bloco de EC",
   "edit": "Editar",
   "effective_balance": "Saldo Efetivo",
   "email_address": "Endereço de e-mail",
@@ -441,6 +448,7 @@
   "export_contact": "Exportar contatos",
   "failed": "Falhou",
   "fee": "Taxa",
+  "fee_nqt": "Taxa",
   "feedback": "Comentários",
   "feedback_given": "Feedback dado",
   "feedback_note": "Nota do feedback",
@@ -470,6 +478,8 @@
   "generated_token_is": "O token gerado é: ",
   "generation_signature": "Assinatura de geração",
   "generator": "Gerador",
+  "generator_address": "Endereço do Gerador",
+  "generator_id": "ID do gerador",
   "generator_public_key": "Chave pública do gerador",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Comentar",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Não há transações neste bloco.",
   "no_transactions_yet": "Nenhuma transação ainda.",
   "non_verified_source": "Fonte desconhecida e potencialmente insegura",
+  "nonce": "Nonce",
   "none": "Nenhum",
   "not_delivered_in_time": "Não entregue a tempo",
   "not_forging": "Não está forjando",
@@ -641,6 +652,7 @@
   "nr_votes": "# Votos",
   "number_of_trades": "Número de negócios",
   "number_of_transactions": "Número de transações",
+  "number_transactions": "Número de Transações",
   "numeric_account_id": "ID numérico da conta",
   "official_hash": "Hash oficial",
   "old_browser_warning": "Você está usando um navegador antigo, não suportado por este aplicativo.",
@@ -672,6 +684,7 @@
   "payload_length": "Comprimento da Carga",
   "payment": "Forma de pagamento",
   "payment_with_message": "Pagamento com mensagem",
+  "payments": "Pagamentos",
   "peer": "Par",
   "peers": "Pares",
   "pending": "Pendente",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Transações recentes desde",
   "recipient": "Beneficiário",
   "recipient_account": "Conta de destino",
+  "recipient_address": "Endereço do destinatário",
   "recipient_alias_suggestion": "Se você quiser digitar um pseudônimo, prefixe-o com o caractere @.",
+  "recipient_id": "ID de destinatário",
   "recipient_info": "A conta do destinatário tem uma chave pública e um saldo de __burst__ burst.",
   "recipient_malformed": "A conta do destinatário é malformada, favor ajustar.",
   "recipient_malformed_suggestion": "O endereço destinatário está errado, você quis dizer __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "A chave pública desta conta já foi declarada. Use o ID de conta no lugar dela.",
   "recipient_unknown": "A conta de destino é desconhecida, o que significa que nunca recebeu nem enviou nenhuma transação. Por favor, confirme a conta de destino antes de enviar.",
   "recipient_unknown_pka": "A conta do destinatário é uma conta desconhecida, ou seja, nunca houve uma transação de entrada ou de saída. Você pode aumentar a segurança, fornecendo a chave pública do destinatário.",
+  "recipients": "Destinatários",
   "record": "Registro",
   "referenced_transaction_full_hash": "Hash completo da transação referenciada",
   "referenced_transaction_hash": "Hash da transação referenciada",
@@ -750,9 +766,11 @@
   "remove_from_group": "Remover do grupo",
   "repeat": "Repetir",
   "request_burst": "Request BURST",
+  "request_processing_time": "Solicitar Tempo de Processamento",
   "returning_user_q": "Já é usuário?",
   "reward_recipient": "Destinatário da recompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Número de colher",
   "search_aliases": "Pesquisar Pseudônimos...",
   "search_assets": "Pesquisar ativos...",
   "search_by_id": "Pesquisar por ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Enviar Mensagem",
   "send_message_to_sender": "Enviar mensagem para o remetente",
   "sender": "Remetente",
+  "sender_address": "Endereço do remetente",
+  "sender_id": "ID do remetente",
   "sender_public_key": "Chave Publica do remetente",
   "server_error_unknown": "Ocorreu um erro desconhecido.",
   "set_account_info": "Definir a informação da conta",
@@ -790,12 +810,14 @@
   "settings": "Configurações",
   "share_address": "Compartilhar endereço",
   "show_console_log_button": "Mostrar botão de Log do Console",
+  "signature": "Assinatura",
   "signature_hash": "Hash da Assinatura",
   "signed_transaction_bytes": "Bytes da transação assinada",
   "smart_contract": "Contrato Inteligente",
   "smart_contract_creation": "Criação de Contrato Inteligente",
   "smart_contract_payment": "Pagamento de contrato inteligente",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Curva suave",
   "standard_fee": "Padrão",
   "start_date": "Data de início",
   "start_forging": "Iniciar o forjamento",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Nome de grupo atualizado com sucesso.",
   "success_hash_verification": "A versão baixada foi verificada, o hash é correto. Você pode prosseguir com a instalação.",
   "success_issue_asset": "O ativo foi criado e estará disponível em breve.",
+  "success_lease_balance": "Seu saldo será alugado em 1440 blocos.",
   "success_message_sent": "Sua mensagem foi enviada.",
   "success_messages_decrypt": "Mensagem(ns) descriptografada(s) com sucesso.",
   "success_passphrase_confirmed": "Senha confirmada com sucesso, você iniciou a sua sessão.",
@@ -953,6 +976,7 @@
   "website_or_text": "Site ou texto",
   "welcome_to_burst": "Bem vindo a burst!",
   "with_burst": "Com burst",
+  "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
   "yesterdays_change": "Mudança de ontem",
