--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -49,6 +49,7 @@
   "all_blocks": "Svi blokovi",
   "all_transactions": "Sve transakcije",
   "amount": "Iznos",
+  "amount_nqt": "Iznos",
   "amount_plus_fee": "Iznos + provizija",
   "and_logout": "i odjavite se",
   "animate_forging_indicator": "Animirajte indikator kovanja",
@@ -96,9 +97,13 @@
   "block": "Blok",
   "block_details": "Detalji bloka",
   "block_generation_time": "Vrijeme generiranja bloka",
+  "block_height": "Block Height",
+  "block_id": "ID bloka",
+  "block_reward": "Block Reward",
   "block_signature": "Potpis bloka",
   "block_timestamp": "Oznaka vremena bloka",
   "blocks": "Blokovi",
+  "blocks_details": "Detalji o bloku",
   "bookmark_asset": "Dodaj asset u oznake",
   "broadcast": "odašiljaj",
   "broadcast_transaction": "Emitiraj transakciju",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Preuzimanje blockchaina",
   "downloading_update": "Ažuriranje se preuzima. Bićeš obavešten kada završi.",
   "drop_update": "Nakon preuzimanje spustite ažurirani klijent (zip datoteku) ovdje ili kliknite za odabir.",
+  "ec_block_height": "EC Block Height",
+  "ec_block_id": "EC Block ID",
   "edit": "Uredi",
   "effective_balance": "Efektivni saldo",
   "email_address": "Email adresa",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Neuspjeh",
   "fee": "Provizija",
+  "fee_nqt": "Fee",
   "feedback": "Povratna informacija",
   "feedback_given": "Povratna informacija ostavljena",
   "feedback_note": "Poruka povratne informacije",
@@ -470,6 +478,8 @@
   "generated_token_is": "Generirani token je: ",
   "generation_signature": "Generiranje potpisa",
   "generator": "Generator",
+  "generator_address": "Adresa generatora",
+  "generator_id": "ID generatora",
   "generator_public_key": "Generator javnog ključa",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Povratna informacija",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Nema transakcija u ovom bloku.",
   "no_transactions_yet": "Još uvijek bez transakcija.",
   "non_verified_source": "Nepoznat, potencijalno nesiguran izvor",
+  "nonce": "Nonce",
   "none": "Ništa",
   "not_delivered_in_time": "Nije isporučeno na vrijeme",
   "not_forging": "Kovanje nije započeto",
@@ -641,6 +652,7 @@
   "nr_votes": "# Glasovi",
   "number_of_trades": "Broj trgovanja",
   "number_of_transactions": "Broj transakcija",
+  "number_transactions": "Broj transakcija",
   "numeric_account_id": "Numerički ID Računa",
   "official_hash": "Službeni hash",
   "old_browser_warning": "Koristite stari web preglednik koji ova aplikacija ne podržava.",
@@ -670,8 +682,9 @@
   "payload": "Plaćeni teret",
   "payload_hash": "Težina hasha",
   "payload_length": "Payload Length",
-  "payment": "",
+  "payment": "Plaćanje",
   "payment_with_message": "Plaćanje uz poruku",
+  "payments": "Plaćanja",
   "peer": "Peer",
   "peers": "Peers",
   "pending": "Na čekanju",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Nedavne transakcije od",
   "recipient": "Primatelj",
   "recipient_account": "Račun primalaca",
+  "recipient_address": "Adresa primatelja",
   "recipient_alias_suggestion": "Ako želite unijeti pseudonim ispred (pseudonima) koristite @ znak.",
+  "recipient_id": "ID primatelja",
   "recipient_info": "Račun primaoca posjeduje javni ključ i saldo od __burst__ burst.",
   "recipient_malformed": "Račun primatelja je pogrešan, molimo ispravite unos.",
   "recipient_malformed_suggestion": "Adresa primatelja je izobličena, jeste li mislili __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Javni ključ ovog računa je već oglašen. Koristite ID računa umjesto javnog ključa.",
   "recipient_unknown": "Račun primatelja je nepoznat, što znači da nikada nije imao dolazeću ili odlazeću transakciju. Molimo provjerite još jednom adresu primatelja prije slanja.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "recipients": "Primatelji",
   "record": "Record",
   "referenced_transaction_full_hash": "Referentna transakcija kompletan hash",
   "referenced_transaction_hash": "Hash upućene transakcije",
@@ -750,9 +766,11 @@
   "remove_from_group": "Ukloni iz grupe",
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
+  "request_processing_time": "Zahtjev za obradu vremena",
   "returning_user_q": "Korisnik povratnik?",
   "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop Number",
   "search_aliases": "Traži pseudonime...",
   "search_assets": "Traži Assete...",
   "search_by_id": "Pretraživanje prema ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Pošaljite poruku",
   "send_message_to_sender": "Pošaljite Poruku Pošiljaocu",
   "sender": "Pošiljatelj",
+  "sender_address": "Adresa pošiljatelja",
+  "sender_id": "ID pošiljatelja",
   "sender_public_key": "Javni ključ pošiljatelja",
   "server_error_unknown": "Pojavila se nepoznata greška.",
   "set_account_info": "Postavi Info računa",
@@ -790,12 +810,14 @@
   "settings": "Postavke",
   "share_address": "Dijeljene adrese",
   "show_console_log_button": "Prikaži Log gumb konzole",
+  "signature": "Potpis",
   "signature_hash": "Hash potpisa",
   "signed_transaction_bytes": "Potpisana transakcija Bytes",
   "smart_contract": "Smart Contract",
   "smart_contract_creation": "Stvaranje pametnih ugovora",
   "smart_contract_payment": "Plaćanje pametnog ugovora",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Smooth Curve",
   "standard_fee": "Standard",
   "start_date": "Početni datum",
   "start_forging": "Započni kovati",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Ime grupe uspješno izmijenjeno.",
   "success_hash_verification": "Preuzeta inačica je provjerena, hash je ispravan. Možete nastaviti s instalacijom.",
   "success_issue_asset": "Asset je kreiran i bit će dostupan uskoro.",
+  "success_lease_balance": "Vaš saldo će biti iznajmljen u 1440 blokova.",
   "success_message_sent": "Vaša poruka je poslana.",
   "success_messages_decrypt": "Poruka(ke) uspješno dekodirana.",
   "success_passphrase_confirmed": "Lozinka uspješno potvrđena, sad ste prijavljeni.",
@@ -953,6 +976,7 @@
   "website_or_text": "Website ili tekst",
   "welcome_to_burst": "Dobrodošli u burst!",
   "with_burst": "Sa burst",
+  "wrong_pin": "Pogrešan PIN",
   "x_confirmations": "__x__ potvrda",
   "yes": "Da",
   "yesterdays_change": "Jučerašnja promena",
