--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -49,6 +49,7 @@
   "all_blocks": "Všetky bloky",
   "all_transactions": "Všetky transakcie",
   "amount": "Suma",
+  "amount_nqt": "čiastka",
   "amount_plus_fee": "Suma + poplatok",
   "and_logout": "a odhlásiť sa",
   "animate_forging_indicator": "Animovať indikátor kovania",
@@ -96,9 +97,13 @@
   "block": "Blok",
   "block_details": "Podrobnosti bloku",
   "block_generation_time": "Doba vygenerovania bloku",
+  "block_height": "Výška bloku",
+  "block_id": "ID bloku",
+  "block_reward": "Blok Odmena",
   "block_signature": "Podpis bloku",
   "block_timestamp": "Časová pečiatka bloku",
   "blocks": "Bloky",
+  "blocks_details": "Detaily bloku",
   "bookmark_asset": "Pridať medzi záložky tento majetok",
   "broadcast": "Poslať",
   "broadcast_transaction": "Poslať transakciu",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Blockchain sa sťahuje",
   "downloading_update": "Aktualizácia sa práve preberá. Po dokončení budete informovaný.",
   "drop_update": "Po stiahnutí presuňte aktualizáciu klienta (zip súbor) sem, alebo kliknutím vyberte.",
+  "ec_block_height": "Výška bloku EC",
+  "ec_block_id": "ID bloku EC",
   "edit": "Upraviť",
   "effective_balance": "Efektívny zostatok",
   "email_address": "E-mailové adresy",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "Neúspešne",
   "fee": "Poplatok",
+  "fee_nqt": "poplatok",
   "feedback": "Spätná väzba",
   "feedback_given": "Spätná väzba",
   "feedback_note": "Poznámka spätnej väzby",
@@ -470,6 +478,8 @@
   "generated_token_is": "Generovaný token je:",
   "generation_signature": "Generovanie podpisu",
   "generator": "Generátor",
+  "generator_address": "Adresa generátora",
+  "generator_id": "ID generátora",
   "generator_public_key": "Generátor verejného kľúča",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Poskytnúť spätnú väzbu",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "Žiadne transakcie v tomto bloku.",
   "no_transactions_yet": "Zatiaľ žiadne transakcie.",
   "non_verified_source": "Neznámy, potenciálne nezabezpečený zdroj",
+  "nonce": "nonce",
   "none": "Žiadne",
   "not_delivered_in_time": "Nedoručené včas",
   "not_forging": "Nekuje",
@@ -641,6 +652,7 @@
   "nr_votes": "# Hlasov",
   "number_of_trades": "Počet obchodov",
   "number_of_transactions": "Počet transakcií",
+  "number_transactions": "Počet transakcií",
   "numeric_account_id": "Číselné ID účtu",
   "official_hash": "Oficiálny Hash",
   "old_browser_warning": "Používate starý prehliadač, ktorý táto aplikácia nepodporuje.",
@@ -670,8 +682,9 @@
   "payload": "Zaťaženie",
   "payload_hash": "Hash zaťaženie",
   "payload_length": "Dĺžka zaťaženia",
-  "payment": "",
+  "payment": "platba",
   "payment_with_message": "Platba so správou",
+  "payments": "platby",
   "peer": "Peer",
   "peers": "Peeri",
   "pending": "Čakajúce",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Nedávne transakcie odvtedy",
   "recipient": "Príjemca",
   "recipient_account": "Účet príjemcu",
+  "recipient_address": "Adresa príjemcu",
   "recipient_alias_suggestion": "Ak chcete zadať alias, na začiatok aliasu pripojte znak @.",
+  "recipient_id": "ID príjemcu",
   "recipient_info": "Účet príjemcu má verejný kľúč a zostatok __burst__ BURST.",
   "recipient_malformed": "Účet príjemcu je nesprávny, upravte to prosím.",
   "recipient_malformed_suggestion": "Adresa príjemcu je nesprávna, mali ste na mysli __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Verejný kľúč tohto účtu už bol oznámený. Použite ID účtu.",
   "recipient_unknown": "Účet príjemcu je neznámy účet, znamená to, že ešte nikdy nevykonal prichádzajúcu alebo odchádzajúcu transakciu. Prosím skontrolujte dvakrát adresu vášho príjemcu pred odoslaním.",
   "recipient_unknown_pka": "Účet príjemcu je neznámy účet, to znamená že ešte nemal žiadnu prichádzajúcu alebo odchádzajúcu transakciu. Pri tomto odoslaní musíte zadať aj verejný kľúč príjemcu.",
+  "recipients": "príjemcovia",
   "record": "rekord",
   "referenced_transaction_full_hash": "Kompletný hash odkazovanej transakcie",
   "referenced_transaction_hash": "Hash odkazovanej transakcie",
@@ -750,9 +766,11 @@
   "remove_from_group": "Odstrániť zo skupiny",
   "repeat": "Opakovať",
   "request_burst": "Request BURST",
+  "request_processing_time": "Čas spracovania požiadavky",
   "returning_user_q": "Opätovný používateľ?",
   "reward_recipient": "Príjemca odmeny",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop Number",
   "search_aliases": "Hľadať aliasy...",
   "search_assets": "Hľadať majetok...",
   "search_by_id": "Hľadať podľa ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Odoslať správu",
   "send_message_to_sender": "Odoslať správu odosielateľovi",
   "sender": "Odosielateľ",
+  "sender_address": "Adresa odosielateľa",
+  "sender_id": "ID odosielateľa",
   "sender_public_key": "Verejný kľúč odosielateľa",
   "server_error_unknown": "Vyskytla sa neznáma chyba.",
   "set_account_info": "Nastaviť info účtu",
@@ -790,12 +810,14 @@
   "settings": "Nastavenia",
   "share_address": "Zdieľať adresu",
   "show_console_log_button": "Ukázať tlačidlo Log konzoly",
+  "signature": "podpis",
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Podpísané bajty transakcií",
   "smart_contract": "Inteligentná zmluva",
   "smart_contract_creation": "Vytvorenie inteligentnej zmluvy",
   "smart_contract_payment": "Platba inteligentnej zmluvy",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Hladká krivka",
   "standard_fee": "štandardné",
   "start_date": "Dátum začatia",
   "start_forging": "Začať kovanie",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Názov skupiny úspešne aktualizovaný.",
   "success_hash_verification": "Stiahnutá verzia bola overená, hash je správny. Môžete pokračovať v inštalácii.",
   "success_issue_asset": "Majetok bol vytvorený a bude čoskoro k dispozícii.",
+  "success_lease_balance": "Váš zostatok bude prenajatý v 1440 blokoch.",
   "success_message_sent": "Vaša správa bola odoslaná.",
   "success_messages_decrypt": "Správa(y) bola úspešne dešifrovaná.",
   "success_passphrase_confirmed": "Heslo bolo úspešne overené, teraz ste prihlásení.",
@@ -953,6 +976,7 @@
   "website_or_text": "Webstránka alebo text",
   "welcome_to_burst": "Vitajte v Burst!",
   "with_burst": "S BURST",
+  "wrong_pin": "Chybný kód PIN",
   "x_confirmations": "__x__ potvrdení",
   "yes": "Áno",
   "yesterdays_change": "Včerajšia zmena",
