--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -49,6 +49,7 @@
   "all_blocks": "Всі блоки",
   "all_transactions": "Всі транзакції",
   "amount": "Сума",
+  "amount_nqt": "Сума",
   "amount_plus_fee": "Сума + комісія",
   "and_logout": "і вихід із системи",
   "animate_forging_indicator": "Анімувати індикатор форжинга",
@@ -96,9 +97,13 @@
   "block": "Блок",
   "block_details": "Подробиці Блоку",
   "block_generation_time": "Час генерації Блока",
+  "block_height": "Висота блоку",
+  "block_id": "Ідентифікатор блоку",
+  "block_reward": "Блокувати винагороду",
   "block_signature": "Підпис Блоку",
   "block_timestamp": "Відмітка часу блоку",
   "blocks": "Блоки",
+  "blocks_details": "Деталі блоку",
   "bookmark_asset": "Додати в закладки цей актив",
   "broadcast": "Трансляція",
   "broadcast_transaction": "Послати Транзакцію",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "Завантаження Blockchain",
   "downloading_update": "Оновлення завантажується. Ви будете проінформовані після завершення.",
   "drop_update": "Перетягніть сюди викачаний клієнт(zip файл) або натисніть для вибору.",
+  "ec_block_height": "Висота блоку ЄС",
+  "ec_block_id": "ID блоку EC",
   "edit": "Редагувати",
   "effective_balance": "Ефективний баланс",
   "email_address": "Адреса електронної пошти",
@@ -441,6 +448,7 @@
   "export_contact": "Експортувати контакти",
   "failed": "Не вдалося",
   "fee": "Комісія",
+  "fee_nqt": "Плата",
   "feedback": "Зворотній зв'язок",
   "feedback_given": "Зворотний зв'язок наданий",
   "feedback_note": "Відгук",
@@ -470,6 +478,8 @@
   "generated_token_is": "Згенерований маркер є:",
   "generation_signature": "Створення підпису",
   "generator": "Генератор",
+  "generator_address": "Адреса генератора",
+  "generator_id": "ID генератора",
   "generator_public_key": "Генератор Відкритого ключа",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Надання відгуку",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "У цьому блоці немає транзакцій.",
   "no_transactions_yet": "Ще немає транзакцій.",
   "non_verified_source": "Невідомий, потенційно небезпечний джерело",
+  "nonce": "Nonce",
   "none": "Не знайдено",
   "not_delivered_in_time": "Не доставлено вчасно",
   "not_forging": "Форжинга нема",
@@ -641,6 +652,7 @@
   "nr_votes": "# Голосів",
   "number_of_trades": "Кількість Угод",
   "number_of_transactions": "Кількість транзакцій",
+  "number_transactions": "Кількість операцій",
   "numeric_account_id": "Числовий ідентифікатор аккаунта",
   "official_hash": "Офіційний хеш",
   "old_browser_warning": "Ви користуєтесь старим броузером, ця програма не підтримується.",
@@ -670,8 +682,9 @@
   "payload": "Комерцiйне навантаження",
   "payload_hash": "Хэш комерческой навантаження",
   "payload_length": "Довжина комерційного навантаження",
-  "payment": "",
+  "payment": "Оплата",
   "payment_with_message": "Розрахунок з повідомлення",
+  "payments": "Платежі",
   "peer": "Вузол",
   "peers": "Вузли",
   "pending": "Очікуючі",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "Останні транзакції з",
   "recipient": "Одержувач",
   "recipient_account": "Акаунт одержувача",
+  "recipient_address": "Адреса отримувача",
   "recipient_alias_suggestion": "Якщо ви хочете ввести альяс, введіть перед ним символ @.",
+  "recipient_id": "ID одержувача",
   "recipient_info": "Рахунок одержувача має відкритий ключ і баланс __burst__ BURST.",
   "recipient_malformed": "Невірний формат облікового запису одержувача, будь ласка виправіть.",
   "recipient_malformed_suggestion": "Адресу одержувача вказано невірно, ви мали на увазі __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "Публічний ключ цього рахунку вже анонсовано. Натомість, будь-ласка використайте номер рахунку.",
   "recipient_unknown": "Рахунок одержувача є невідомим аккаунтом, що означає, що він ніколи не мав транзакцій, що входять або витікаючих. Будь ласка, перевірте адресу одержувача перед відправкою.",
   "recipient_unknown_pka": "Рахунок одержувача невідомий, це означає, що в нім немає транзакцій, що ні входять, ні витікаючих. Для відправки цього запиту необхідно також вказати публічний ключ одержувача.",
+  "recipients": "Одержувачі",
   "record": "Запис",
   "referenced_transaction_full_hash": "Повний хэш вказаної транзакції",
   "referenced_transaction_hash": "Хэш Пов'язаної Транзакції",
@@ -750,9 +766,11 @@
   "remove_from_group": "Видалити із групи",
   "repeat": "Повторити",
   "request_burst": "Request BURST",
+  "request_processing_time": "Час обробки запиту",
   "returning_user_q": "Зареєстрований Користувач?",
   "reward_recipient": "Одержувач нагороди",
   "same_out": "Same Amount",
+  "scoop_num": "Номер Scoop",
   "search_aliases": "Пошук Аліасiв...",
   "search_assets": "Пошук активів...",
   "search_by_id": "Пошук по ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "Надіслати повідомлення",
   "send_message_to_sender": "Відправити повідомлення посилачеві",
   "sender": "Відправник",
+  "sender_address": "Адреса відправника",
+  "sender_id": "ID відправника",
   "sender_public_key": "Відправник відкритого ключа",
   "server_error_unknown": "Сталася невідома помилка.",
   "set_account_info": "Встановити інформацію аккаунта",
@@ -790,12 +810,14 @@
   "settings": "Параметри",
   "share_address": "Поділитися Адресою",
   "show_console_log_button": "Відображати кнопку \"консолі  журналу",
+  "signature": "Підпис",
   "signature_hash": "Хэш Підпису",
   "signed_transaction_bytes": "Підписані байти транзакції",
   "smart_contract": "Розумний контракт",
   "smart_contract_creation": "Створення смарт-контракту",
   "smart_contract_payment": "Оплата смарт-контракту",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "Плавна крива",
   "standard_fee": "Стандарт",
   "start_date": "Дата початку",
   "start_forging": "Почати форжинг",
@@ -855,6 +877,7 @@
   "success_group_name_update": "Ім'я групи успішно оновлене.",
   "success_hash_verification": "Завантажена версія була перевірена, хеш є правильним. Ви можете продовжити інсталяцію.",
   "success_issue_asset": "Актив був створений і буде доступний найближчим часом.",
+  "success_lease_balance": "Ваш баланс буде передано в 1440 блоків.",
   "success_message_sent": "Ваше повідомлення було надіслано.",
   "success_messages_decrypt": "Повідомлення успішно розшифрувано.",
   "success_passphrase_confirmed": "Парольна фраза підтверджена успішно, ви зараз ввійшли до системи.",
@@ -953,6 +976,7 @@
   "website_or_text": "Веб-сайт або текст",
   "welcome_to_burst": "Ласкаво просимо в Burst!",
   "with_burst": "З BURST",
+  "wrong_pin": "Неправильний PIN-код",
   "x_confirmations": "__x__ підтверджень",
   "yes": "Так",
   "yesterdays_change": "Вчорашня зміна",
