--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -49,6 +49,7 @@
   "all_blocks": "所有区块",
   "all_transactions": "所有交易",
   "amount": "数量",
+  "amount_nqt": "量",
   "amount_plus_fee": "数量 + 费用",
   "and_logout": "并登出",
   "animate_forging_indicator": "激活锻造指示器",
@@ -96,9 +97,13 @@
   "block": "区块",
   "block_details": "区块详细信息",
   "block_generation_time": "区块生成时间",
+  "block_height": "阻挡高度",
+  "block_id": "块ID",
+  "block_reward": "阻止奖励",
   "block_signature": "区块签名",
   "block_timestamp": "区块时间戳",
   "blocks": "区块",
+  "blocks_details": "阻止细节",
   "bookmark_asset": "将该资产加入书签",
   "broadcast": "广播",
   "broadcast_transaction": "广播交易",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "正在下载Blockchain",
   "downloading_update": "正在下载更新。一旦完成，您将收到通知。",
   "drop_update": "下载后在此更新客户端（zip 文件），或单击以选择。",
+  "ec_block_height": "EC块高度",
+  "ec_block_id": "EC块ID",
   "edit": "编辑",
   "effective_balance": "有效余额",
   "email_address": "电子邮件地址",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "失败",
   "fee": "费用",
+  "fee_nqt": "费用",
   "feedback": "反馈",
   "feedback_given": "给出反馈",
   "feedback_note": "反馈备注",
@@ -470,6 +478,8 @@
   "generated_token_is": "生成的令牌是：",
   "generation_signature": "生成签名",
   "generator": "产生者",
+  "generator_address": "发电机地址",
+  "generator_id": "生成器ID",
   "generator_public_key": "生成公钥",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "给出反馈",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "该区块中没有交易。",
   "no_transactions_yet": "没有交易记录。",
   "non_verified_source": "未知，可能不安全的来源",
+  "nonce": "杜撰",
   "none": "无",
   "not_delivered_in_time": "未按时交付",
   "not_forging": "未锻造",
@@ -641,6 +652,7 @@
   "nr_votes": "# 投票",
   "number_of_trades": "交易数目",
   "number_of_transactions": "交易次数",
+  "number_transactions": "交易数量",
   "numeric_account_id": "数字账户 ID",
   "official_hash": "官方哈希",
   "old_browser_warning": "您正在使用的浏览器版本过低，不支持该应用。",
@@ -670,8 +682,9 @@
   "payload": "载荷",
   "payload_hash": "载荷哈希",
   "payload_length": "载荷长度",
-  "payment": "",
+  "payment": "付款",
   "payment_with_message": "付款附加信息",
+  "payments": "支付",
   "peer": "节点",
   "peers": "节点",
   "pending": "待定",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "近期交易以来",
   "recipient": "接收者",
   "recipient_account": "接收者帐户",
+  "recipient_address": "收件人地址",
   "recipient_alias_suggestion": "如果您想要输入一个别名，请以 @ 开头。",
+  "recipient_id": "收件人ID",
   "recipient_info": "接收者帐户拥有公钥和 __burst__ BURST 的余额。",
   "recipient_malformed": "接收者的帐户格式不正确，请调整。",
   "recipient_malformed_suggestion": "接收者地址格式不正确，您指的是 __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "该账户的公钥已经公布。使用帐户 ID 来代替。",
   "recipient_unknown": "接收者帐户是未知帐户，意味着它没有转入或转出的交易。请在提交之前再次确认您的接收者地址。",
   "recipient_unknown_pka": "接收者帐户是未知帐户，意味着它从来没有转入或转出的交易记录。为了提交该请求，您还必须提供接收者的公钥。",
+  "recipients": "收件人",
   "record": "记录",
   "referenced_transaction_full_hash": "参考交易完整哈希",
   "referenced_transaction_hash": "参考交易哈希",
@@ -750,9 +766,11 @@
   "remove_from_group": "从群组中移除",
   "repeat": "重复",
   "request_burst": "Request BURST",
+  "request_processing_time": "请求处理时间",
   "returning_user_q": "返回的用户？",
   "reward_recipient": "奖励收件人",
   "same_out": "Same Amount",
+  "scoop_num": "铲号",
   "search_aliases": "搜索别名...",
   "search_assets": "搜索资产...",
   "search_by_id": "搜索 ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "发送信息​​​​​​​​",
   "send_message_to_sender": "向发送者发送信息",
   "sender": "发送者",
+  "sender_address": "发件人地址",
+  "sender_id": "发件人ID",
   "sender_public_key": "发送者公钥",
   "server_error_unknown": "出现未知错误。",
   "set_account_info": "设置帐户信息",
@@ -790,12 +810,14 @@
   "settings": "设置",
   "share_address": "共享地址",
   "show_console_log_button": "显示控制台日志按钮",
+  "signature": "签名",
   "signature_hash": "哈希签名",
   "signed_transaction_bytes": "已签名的交易字节",
   "smart_contract": "智能合约",
   "smart_contract_creation": "智能合约创建",
   "smart_contract_payment": "支付智能合约",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "平滑曲线",
   "standard_fee": "标准",
   "start_date": "开始日期",
   "start_forging": "开始锻造",
@@ -855,6 +877,7 @@
   "success_group_name_update": "组名更新成功。",
   "success_hash_verification": "下载的版本已验证，哈希是正确的。您可以继续安装。",
   "success_issue_asset": "资产已经创建，很快就能使用。",
+  "success_lease_balance": "您的余额将在1440块出租。",
   "success_message_sent": "您的信息已发送。",
   "success_messages_decrypt": "信息解密成功。",
   "success_passphrase_confirmed": "密码确认成功，您现在已登录。",
@@ -953,6 +976,7 @@
   "website_or_text": "网站或文本",
   "welcome_to_burst": "欢迎来到 Burst!",
   "with_burst": "与 BURST",
+  "wrong_pin": "密码错误",
   "x_confirmations": "__x__ 确认",
   "yes": "是",
   "yesterdays_change": "昨天的变化",
