--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -49,6 +49,7 @@
   "all_blocks": "所有區塊",
   "all_transactions": "所有交易",
   "amount": "數量",
+  "amount_nqt": "量",
   "amount_plus_fee": "數量 + 費用",
   "and_logout": "並登出",
   "animate_forging_indicator": "激活鍛造指示器",
@@ -96,9 +97,13 @@
   "block": "區塊",
   "block_details": "區塊詳細信息",
   "block_generation_time": "區塊生成時間",
+  "block_height": "阻挡高度",
+  "block_id": "块ID",
+  "block_reward": "阻止奖励",
   "block_signature": "區塊簽名",
   "block_timestamp": "區塊時間戳",
   "blocks": "區塊",
+  "blocks_details": "阻止细节",
   "bookmark_asset": "將該資產加入書籤",
   "broadcast": "廣播",
   "broadcast_transaction": "廣播交易",
@@ -224,6 +229,8 @@
   "downloading_blockchain": "正在下載 Blockchain",
   "downloading_update": "正在下载更新。一旦完成，您将收到通知。",
   "drop_update": "下載後在此更新客戶端（zip 文件），或單擊以選擇。",
+  "ec_block_height": "EC块高度",
+  "ec_block_id": "EC块ID",
   "edit": "編輯",
   "effective_balance": "有效餘額",
   "email_address": "電子郵件地址",
@@ -441,6 +448,7 @@
   "export_contact": "Export Contacts",
   "failed": "失敗",
   "fee": "費用",
+  "fee_nqt": "费用",
   "feedback": "反饋",
   "feedback_given": "給出反饋",
   "feedback_note": "反饋備註",
@@ -470,6 +478,8 @@
   "generated_token_is": "生成的令牌是：",
   "generation_signature": "生成簽名",
   "generator": "產生者",
+  "generator_address": "发电机地址",
+  "generator_id": "生成器ID",
   "generator_public_key": "生成公匙",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "給出反饋",
@@ -619,6 +629,7 @@
   "no_transactions_in_block": "該區塊中沒有交易。",
   "no_transactions_yet": "沒有交易記錄",
   "non_verified_source": "未知，可能不安全的来源",
+  "nonce": "杜撰",
   "none": "無",
   "not_delivered_in_time": "未按時交付",
   "not_forging": "未鍛造",
@@ -641,6 +652,7 @@
   "nr_votes": "# 投票",
   "number_of_trades": "交易數目",
   "number_of_transactions": "交易次數",
+  "number_transactions": "交易数量",
   "numeric_account_id": "數字帳戶ID",
   "official_hash": "官方哈希",
   "old_browser_warning": "您正在使用的瀏覽器版本過低，不支持該應用。",
@@ -670,8 +682,9 @@
   "payload": "載荷",
   "payload_hash": "載荷哈希",
   "payload_length": "載荷長度",
-  "payment": "",
+  "payment": "付款",
   "payment_with_message": "付款附加信息",
+  "payments": "支付",
   "peer": "節點",
   "peers": "節點",
   "pending": "待定",
@@ -717,7 +730,9 @@
   "recent_transactions_since": "近期交易以来",
   "recipient": "接收者",
   "recipient_account": "接收者帳戶",
+  "recipient_address": "收件人地址",
   "recipient_alias_suggestion": "如果您想要輸入一個別名，請以@開頭。",
+  "recipient_id": "收件人ID",
   "recipient_info": "接收者帳戶擁有公鑰和__burst__ BURST的餘額。",
   "recipient_malformed": "接收者的帳戶格式不正確，請調整。",
   "recipient_malformed_suggestion": "接收者地址格式不正確，您指的是 __recipient__ ?",
@@ -729,6 +744,7 @@
   "recipient_public_key_already_announced": "該帳戶的公鑰已經公佈。使用帳戶ID來代替。",
   "recipient_unknown": "接收者帳戶是未知帳戶，意味著它沒有轉入或轉出的交易。請在提交之前再次檢查您的接收者地址。",
   "recipient_unknown_pka": "接收者賬戶是未知帳戶，意味著它從來沒有轉入或轉出的交易記錄。為了提交該請求，您還必須提供接收者的公鑰。",
+  "recipients": "收件人",
   "record": "记录",
   "referenced_transaction_full_hash": "参考交易完整哈希",
   "referenced_transaction_hash": "參考交易哈希",
@@ -750,9 +766,11 @@
   "remove_from_group": "從群組中移除",
   "repeat": "重復",
   "request_burst": "Request BURST",
+  "request_processing_time": "请求处理时间",
   "returning_user_q": "返回的用戶？",
   "reward_recipient": "奖励收件人",
   "same_out": "Same Amount",
+  "scoop_num": "铲号",
   "search_aliases": "搜索別名...",
   "search_assets": "搜索資產...",
   "search_by_id": "搜索 ID...",
@@ -783,6 +801,8 @@
   "send_message_button": "發送信息​​​​​​​​",
   "send_message_to_sender": "向發送者發送信息",
   "sender": "發送者",
+  "sender_address": "发件人地址",
+  "sender_id": "发件人ID",
   "sender_public_key": "發送者公鈅",
   "server_error_unknown": "出現未知錯誤。",
   "set_account_info": "設置賬戶信息",
@@ -790,12 +810,14 @@
   "settings": "設置",
   "share_address": "共享地址",
   "show_console_log_button": "顯示控制台日誌按鈕",
+  "signature": "签名",
   "signature_hash": "哈希簽名",
   "signed_transaction_bytes": "已簽名的交易字節",
   "smart_contract": "智能合约",
   "smart_contract_creation": "智能合约创建",
   "smart_contract_payment": "支付智能合约",
   "smart_contracts": "Smart Contracts",
+  "smooth_curve": "平滑曲线",
   "standard_fee": "标准",
   "start_date": "開始日期",
   "start_forging": "開始鍛造",
@@ -855,6 +877,7 @@
   "success_group_name_update": "組名更新成功。",
   "success_hash_verification": "下載的版本已驗證，哈希是正確的。您可以繼續安裝。",
   "success_issue_asset": "資產已經創建，很快就能使用。",
+  "success_lease_balance": "您的余额将在1440块出租。",
   "success_message_sent": "您的信息已發送。",
   "success_messages_decrypt": "信息解密成功。",
   "success_passphrase_confirmed": "密碼確認成功，您現在已登錄。",
@@ -953,6 +976,7 @@
   "website_or_text": "網站或文本",
   "welcome_to_burst": "歡迎來到 Burst!",
   "with_burst": "與 BURST",
+  "wrong_pin": "密码错误",
   "x_confirmations": "__x__ 確認",
   "yes": "是",
   "yesterdays_change": "昨天的变化",
